change heading may-tinh

--- a/kinh-nghiem/may-tinh/OTT-apps.html
+++ b/kinh-nghiem/may-tinh/OTT-apps.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>So sánh các OTT app</title>
-<meta name="description" content="So sánh các OTT app dùng để liên lạc trên máy điện thoại" />
+<title>So sánh các OTT app dùng để liên lạc trên máy điện thoại</title>
+<meta name="description" content="So sánh các OTT app dùng để liên lạc trên máy điện thoại" />
 <meta name="keywords" content="OTT, app, viber, zalo, whatsapp, hangout, messenger, truecaller">
 <link rel="canonical" href="https://lehboi.github.io/kinh-nghiem/may-tinh/OTT-apps">
 <link rel="alternate" href="https://www.lhboi.name.vn/kinh-nghiem/may-tinh/OTT-apps">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,14 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
 
   <div class="body">
-    <div class="title">So sánh các OTT app dùng để liên lạc trên máy điện thoại</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -236,6 +231,7 @@ data-ad-slot="5275186684">
   </div>
 
 <!-- body here -->
+  <h1>So sánh các OTT app dùng để liên lạc trên máy điện thoại</h1>
 <p>Có rất nhiều công cụ để liên lạc qua smartphone với chi phí thấp. Bảng dưới đây so sánh chức năng các công cụ đó.
 <br>Chức năng gửi lời nhắn bằng giọng nói của Viber, WhatsApp và Zalo rất tiện. Khi bạn gọi ai đó mà họ không trả lời thì bạn để lại lời nhắn bằng giọng nói để họ biết bạn cần nói về việc gì. Nhắn bằng giọng nói tiện hơn so với nhắn bằng chữ.</p>
 <div>
