--- a/kinh-nghiem/may-tinh/RCS.html
+++ b/kinh-nghiem/may-tinh/RCS.html
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,15 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
 
   <div class="body">
-    <div class="title">Nhắn tin miễn phí với RCS</div>
-<div class="right">Viết lần đầu trong Tháng Tư, 2021.</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -237,31 +231,33 @@ data-ad-slot="5275186684">
   </div>
 
 <!-- body here -->
+  <h1>Nhắn tin miễn phí với RCS</h1>
+<div class="right">Viết lần đầu trong Tháng Tư, 2021.</div>
 <p>Bây giờ người dùng đã quá quen thuộc với các <a href="OTT-apps">app dùng để liên lạc miễn phí qua Internet</a> rồi, giới thiệu thêm một app nữa thì sẽ có ít người quan tâm. Bài viết này sẽ nêu lên những ưu điểm của RCS so với các app kia để mọi người có thêm sự lựa chọn.</p>
-<h1>RCS là gì?</h1>
+<h2>RCS là gì?</h2>
 <p>RCS (Rich Communication Services) là dịch vụ nhắn tin được GSMA (Hiệp hội GSM) thiết kế để thay thế SMS và MMS. Ngoài những dòng chữ, RCS gửi được nhiều thứ khác: file, hình, âm thanh, contact, toạ độ… RCS còn cho chat theo group.</p>
 <p>Đáng lẽ  việc cung cấp dịch vụ RCS thuộc về các nhà mạng di động giống như SMS (và thu phí trên mỗi tin nhắn như SMS, MMS), nhưng các mạng di động đã rất chậm chạp trong việc triển khai RCS; và Google nhảy vào cung cấp dịch vụ RCS qua Internet <b>hoàn toàn miễn phí</b> khi dùng sóng Wi-fi (chỉ tốn cước mobile data khi không có Wi-fi). Google gọi dịch vụ RCS là <b>Chat</b>. Dịch vụ RCS này chỉ có trên Android. Trên iOS đã có dịch vụ iMessage với những tính năng tương tự nhưng hai bên không trao đổi với nhau; Apple đang cân nhắc đưa RCS vào iOS.</p>
-<h1>Ưu điểm của RCS</h1>
-<h2>Những ưu điểm giống như các app khác</h2>
+<h2>Ưu điểm của RCS</h2>
+<h3>Những ưu điểm giống như các app khác</h3>
 <ul>
 <li>miễn phí</li>
 <li>gửi file</li>
 <li>gửi khắp thế giới</li>
 </ul>
-<h2>Không cần cài thêm app</h2>
+<h3>Không cần cài thêm app</h3>
 Bạn chỉ cần dùng app Messages của Google để gửi SMS, MMS, RCS. Không cần thêm app khác.
-<h2>Không cần tạo account</h2>
+<h3>Không cần tạo account</h3>
 Bạn không cần phải ghi nhớ thêm username và password.
-<h2>Không sợ bị hack</h2>
+<h3>Không sợ bị hack</h3>
 Vì không có username và password nên bạn không sợ bị hack qua web. Tuy nhiên vẫn còn rủi ro bị lừa mất số điện thoại.
-<h2>Các tính năng tích hợp trong app</h2>
+<h3>Các tính năng tích hợp trong app</h3>
 Ngoài gửi file, app còn tích hợp tính năng để lấy những thông tin thường dùng gắn vào tin nhắn.
-<h1>Cài đặt RCS</h1>
-<h2>Cài app Messages của Google</h2>
+<h2>Cài đặt RCS</h2>
+<h3>Cài app Messages của Google</h3>
 Cài app từ <a href="https://play.google.com/store/apps/details?id=com.google.android.apps.messaging" target='_blank'>Play Store</a>.
 <br>Nếu máy Android của bạn có cài sẵn một app khác để làm SMS thì bạn cần phải vào Settings để chọn Messages của Google là default SMS app. Để tránh lẫn lộn giữa hai app, bạn nên disable SMS app có sẵn trong máy.
 <br>Nếu máy của bạn gắn hai SIM thì RCS chỉ dùng được với SIM1. Bạn phải chọn dùng mobile data qua SIM1, chọn gọi đi qua SIM1 hoặc "Ask every time", không được chọn gọi đi qua SIM2. Nếu máy của bạn chỉ có một SIM thì chỉ cần chọn dùng mobile data.
-<h2>Chọn dùng RCS</h2>
+<h3>Chọn dùng RCS</h3>
 Mở app Messages của Google,
 <br>Chọn menu <b>⋮</b> ở góc trên bên phải,
 <br>Chọn Settings,
@@ -269,7 +265,7 @@ Mở app Messages của Google,
 <br>Bấm vào Chat features,
 <br>Bật Enable chat features lên.
 <br>Vậy là bạn đã sẵn sàng dùng RCS.
-<h1>Dùng RCS</h1>
+<h2>Dùng RCS</h2>
 Trong app Messages, bạn chọn <b>Start chat</b> để bắt đầu soạn tin,
 <br>Gõ số điện thoại hoặc tên người trong Contacts vào dòng To, để tạo một nhóm chat có hơn hai người thì bấm vào hình người có dấu + ở cuối dòng To rồi lần lượt thêm số điện thoại hoặc tên người,
 <br>Ô gõ nội dung tin nhắn ở dưới đáy màn hình sẽ cho biết bên nhận tin có dùng RCS hay không. Nếu trong ô đó có chữ Chat tức là tất cả những số điện thoại nhận tin đều có dùng RCS. Nếu trong ô đó có chữ Text tức là có ít nhất một số điện thoại nhận tin không dùng RCS, bạn nên mời người dùng số điện thoại đó dùng RCS để có được những ưu điểm kể trên.
@@ -285,7 +281,7 @@ Trong app Messages, bạn chọn <b>Start chat</b> để bắt đầu soạn tin
 <li>file</li>
 </ul>
 Nếu bạn gửi tin nhắn chat đến một nhóm người thì tin nhắn trả lời của từng người đều đến cả nhóm, rất thuận tiện cho trao đổi chung trong nhóm. 
-<h1>RCS thiếu tính năng voice chat</h1>
+<h2>RCS thiếu tính năng voice chat</h2>
 Hầu hết các app gửi tin nhắn qua Internet khác đều có luôn tính năng voice chat hoặc gửi voice mail. Messages của Google không có tính năng voice. Để voice chat bạn cần dùng Google Duo. Khi cài Google Duo vào cùng với Messages thì trong app Messages sẽ có các icon để voice và video chat.
   <hr>
 Hit count <amp-iframe width="120" height="30" frameborder="0" 
