--- a/kinh-nghiem/may-tinh/bat-dau-gnucash.html
+++ b/kinh-nghiem/may-tinh/bat-dau-gnucash.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Bắt đầu GnuCash (Trang web LHBội)</title>
+<title>Bắt đầu GnuCash</title>
 <meta name="description" content="Hướng dẫn bạn làm quen với phần mềm GnuCash để quản lý tài chính gia đình" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân">
 <link rel="alternate" href="https://www.lhboi.name.vn/kinh-nghiem/may-tinh/bat-dau-gnucash">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,15 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
   <div class="body">
-    <div class="title">Bắt đầu GnuCash</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -236,6 +230,7 @@ https://lehboi.github.io/kinh-nghiem/may-tinh/bat-dau-gnucash
     </amp-facebook-like>
   </div>
 
+  <h1>Bắt đầu GnuCash</h1>
   <p>Trang này hướng dẫn bạn làm quen với phần mềm GnuCash để quản lý tài chính gia đình.
   <br>Bạn hãy download và cài đặt <a href="http://www.gnucash.org/" target="_blank">GnuCash</a> vào máy của bạn. Sau đó chép file mẫu <a href="/download/">Giadinh.gnucash</a> về máy của bạn.
   <br>Trên máy Windows, nếu bạn muốn dùng GnuCash với menu chữ Việt giống như hình dưới đây thì bạn hãy thêm hai dòng sau</p>
@@ -248,7 +243,7 @@ LANGUAGE={LANG}
 vào cuối file <b>C:\Program Files\gnucash\etc\gnucash\environment</b>  (dùng <b>notepad</b> mở file đó ra và thêm hai dòng vào). Để gõ chữ Việt vào GnuCash với Unikey thì bạn cần bật tuỳ chọn <i>Luôn sử dụng clipboard cho Unicode</i>.
   <br>Chạy GnuCash trong máy của bạn, mở file mẫu Giadinh.gnucash. Trong file mẫu đã tạo sẵn hệ thống tài khoản và hai báo cáo chi tiêu, tài sản. Bạn có thể tạo thêm tài khoản con cho hợp với mục đích quản lý của gia đình. File mẫu chưa có số liệu, bạn hãy bắt đầu nhập số liệu của gia đình vào.
   <br>Để dễ dùng, nên đặt một số lựa chọn trong chương trình GnuCash bằng cách mở menu <b>Sửa→Tuỳ thích</b>, chọn tab Mặc định sổ cái rồi chọn Tự động phân tách sổ cái và Chế độ dòng đôi.
-  <h3>Các kiểu tài khoản trong GnuCash</h3>
+  <h2>Các kiểu tài khoản trong GnuCash</h2>
   <p>Không giống như ý nghĩa thường gặp của từ tài khoản khi cá nhân mở một tài khoản thanh toán ở ngân hàng, trong GnuCash mọi khoản tiền hoặc tài sản có thể quy thành tiền đều được gọi là tài khoản. Những khoản đó là:</p>
   <ul>
     <li>Những khoản đang có: <b>Tiền mặt</b>|<b>Cash</b>, tiền trong <b>Ngân hàng</b>|<b>Bank</b>, cổ phiếu (<b>Kho</b> (bị dịch sai)|<b>Stock</b>), đơn vị quỹ đầu tư (<b>Quỹ tương hỗ</b>|<b>Mutual Fund</b>), các khoản cho người khác vay (<b>Khoản phải thu</b>|<b>A/Receivable</b>), các tài sản khác (<b>Tài sản</b>|<b>Asset</b>)</li>
@@ -287,7 +282,7 @@ data-ad-slot="3830899615">
 </amp-ad>
 
   <div><amp-img alt="Tài khoản trong GnuCash" src="/images/tai-khoan.png" width="899" height="776" layout="responsive"></amp-img></div>
-  <h3>1. Nhập tài sản đang có</h3>
+  <h2>1. Nhập tài sản đang có</h2>
   <p>Bạn nhập giá trị những tài sản đang có của gia đình vào file Giadinh.gnucash. Mỗi giá trị được ghi vào một tài khoản con dưới tài khoản Tài sản sở hữu 3, và giá trị tương ứng được ghi vào tài khoản <i>Tổng tài sản:Opening Balances</i>.
   <br>Ví dụ: để ghi có 2 triệu đồng tiền trong bóp:</p>
   <ol>
@@ -301,7 +296,7 @@ data-ad-slot="3830899615">
   <div><amp-img alt="mở sổ GnuCash" src="/images/m%e1%bb%9f-s%e1%bb%956859.png" width="1024" height="768" layout="responsive"></amp-img></div>
   <p>Sau khi nhập hết các tài sản đang có vào file, bạn hãy mở tab báo cáo <i>Bảng tổng kết tài sản</i> để xem lại tất cả tài sản của mình được ghi trong GnuCash.
   <br>Những tài sản tích luỹ lâu năm thì nhập vào file <a href="/huu-ich/ke-hoach-tai-chinh/dau-tu-dai-han">spreadsheet</a>.</p>
-  <h3>2. Tạo ngân sách</h3>
+  <h2>2. Tạo ngân sách</h2>
   <p>Tạo ngân sách bằng cách dùng menu <b>Hành động→Budget→Ngân sách mới</b>, trong tab <i>Ngân sách: Ngân sách không tên</i> mới hiện ra, bấm nút <b>Tuỳ chọn</b>  để đổi tên thành <i>Ngân sách tháng</i>. Nhập các số tiền ứng với các khoản chi 1, 2, 3, 5 vào các tháng trong các tài khoản tương ứng, Các khoản chi 4 và 6 không đều đặn hàng tháng nên chỉ ghi vào ô của tháng dự kiến sẽ chi.</p>
   <div><amp-img alt="ngân sách trong GnuCash" src="/images/budget.png" width="1058" height="772" layout="responsive"></amp-img></div>
 <!-- AMP In-article 1 -->
@@ -330,7 +325,7 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-  <h3>3. Nhập các giao dịch</h3>
+  <h2>3. Nhập các giao dịch</h2>
   <p>Việc nhập các giao dịch cũng giống như cách nhập trên, chỉ cần chọn đúng hai tài khoản tham gia giao dịch.</p>
   <ul>
     <li>Khi ghi việc tăng tài sản (nhận lương, nhận lãi tiết kiệm thì một tài khoản thuộc nhánh Thu nhập và một tài khoản thuộc nhánh Tài sản sở hữu.</li>
@@ -340,10 +335,10 @@ data-ad-slot="3830899615">
   </ul>
   <p>Một giao dịch có thể liên quan đến hơn hai tài khoản. Ví dụ khi chuyển khoản 2 triệu đồng đóng học phí, bạn phải trả 3300 đồng phí chuyển khoản thì GnuCash ghi giao dịch này liên quan đến ba tài khoản: <i>Tài khoản thanh toán</i>, tài khoản <i>Chi tiêu:Giáo dục</i> và tài khoản <i>Chi tiêu:Thiết yếu:Tiện nghi:Phí ngân hàng</i>.</p>
   <div><amp-img alt="giao dịch ba tài khoản" src="/images/Chiaa30.png" width="1024" height="768" layout="responsive"></amp-img></div>
-  <h3>4. Kết sổ cuối năm</h3>
+  <h2>4. Kết sổ cuối năm</h2>
   <p>Cuối mỗi năm xuất một báo cáo Tổng kết tài sản ra file để lưu lại, rồi export danh sách tài khoản ra một file gnucash mới, ví dụ Giadinh2015.gnucash. Sau đó mở file gnucash mới, thêm bớt tài khoản cho phù hợp với năm mới rồi lặp lại hai bước: nhập tài sản đang có và tạo ngân sách cho năm mới.
   <br>Hãy lưu giữ thật kỹ các file gnucash và tổng kết tài sản từng năm để có thể xem lại số liệu giao dịch cũ.</p>
-  <h3>5. Xem báo cáo</h3>
+  <h2>5. Xem báo cáo</h2>
   <p>Hàng tuần mở GnuCash ra xem các báo cáo ngân sách và tài sản để điều chỉnh việc chi tiêu và tiết kiệm trong thời gian tới. Giả sử báo cáo ngân sách cho thấy bạn đã chi khoản <i>Cho đi</i> nhiều hơn kế hoạch thì bạn sẽ cân nhắc kỹ hơn khi nhận được thiệp mời dự đám cưới ai đó.</p>
 <!-- AMP In-article 1 -->
 <amp-ad
@@ -372,7 +367,7 @@ data-ad-slot="3830899615">
 </amp-ad>
 
   <hr>
-  <h3>Bảng tổng kết tài sản 27/03/2012</h3>
+  <h2>Bảng tổng kết tài sản 27/03/2012</h2>
 <table class="noborder">
 <tbody>
 <tr>
