--- a/kinh-nghiem/may-tinh/cloudstorage.html
+++ b/kinh-nghiem/may-tinh/cloudstorage.html
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,15 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
   <div class="body">
-    <div class="title">Giữ file trong nhiều máy và nhiều Cloud Storage</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -237,8 +231,9 @@ data-ad-slot="5275186684">
   </div>
 
 <!-- body here -->
+  <h1>Giữ file trong nhiều máy và nhiều Cloud Storage</h1>
   <p>Bây giờ đa số người ta đều có một thứ tài sản đặc biệt cần giữ là các file: file hình/video chụp bằng camera/phone, file nhạc để nghe bằng phone/computer, tài liệu soạn ra khi làm việc và ghi chép cá nhân… Các file đó được tạo ra và giữ trong thẻ nhớ, USB drive, ổ đĩa cứng… và chúng rất dễ bị mất đi vì vật chứa bị hư bất ngờ hoặc người chủ lỡ tay xoá mất.</p>
-  <h1>Backup</h1>
+  <h2>Backup</h2>
   <p>Từ vài chục năm trước, những người dùng máy tính cẩn thận đều định kỳ làm một việc quan trọng là backup, chép các file cần giữ sang một hoặc nhiều vật chứa khác, giữ nhiều bản sao ở các ngày khác nhau, thậm chí những bản sao đó còn được đem đi cất ở toà nhà khác hoặc địa phương khác để lỡ khi hoả hoạn hay thiên tai xảy ra thì không bị mất tất cả các bản sao. Ban đầu, dân máy tính chuyên nghiệp sao chép các file ra băng từ. Chép file vào băng từ và đọc từ băng ra chậm hơn đọc từ đĩa cứng rất nhiều nhưng băng từ rẻ hơn đĩa cứng nhiều lần nên có thể dùng để sao chép nhiều bản mà không quá tốn kém. Dân không chuyên thì không có ổ đọc/ghi băng và cũng không cần chép file ra nhiều bản nên đã chép ra đĩa mềm, rồi CD-Recordable, CD-Rewritable, DVD-Recordable, DVD-Rewritable rồi USB drive hoặc portable hard drive.</p>
 <!-- AMP In-article 1 -->
 <amp-ad
@@ -300,7 +295,7 @@ data-ad-slot="3830899615">
 </amp-ad>
 
   <p>Dịch vụ cloud storage miễn phí cũng có một vấn đề là một ngày nào đó nhà cung cấp chấm dứt hoạt động. Khoảng 4-5 năm trước tôi dùng cloud storage copy.com, đến Tháng 3/2016 họ thông báo rằng sẽ ngưng hoạt động vào Tháng 5/2016, tôi đã phải di cư sang pcloud.com. Rút kinh nghiệm lần đó, bây giờ tôi không trung thành với một nhà cung cấp cloud storage nữa mà dùng nhiều hơn một. Nhưng để dùng nhiều hơn một cloud storage thì phải cẩn thận, phải làm sao cho các bản của file ở trong máy và trong từng cloud là giống nhau. Và việc này càng rắc rối hơn khi người dùng có nhiều máy: máy điện thoại, máy tính xách tay, máy tính để bàn… Phải làm sao cho khi dùng bất kỳ máy nào cũng dùng được đúng file có nội dung mới nhất.</p>
-  <h1>Quy tắc sử dụng</h1>
+  <h2>Quy tắc sử dụng</h2>
   <p>Tôi đang dùng hai smartphone, một máy tính để bàn, một máy tính di động và hai cloud storage với quy tắc đơn giản sau đây để tránh rối loạn. Nguyên tắc là làm sao cho nội dung mới nhất dù được tạo ra ở đâu cũng chỉ được truyền đến mỗi chỗ chứa khác theo một đường mà thôi. Nếu có một chỗ chứa nhận được một file mới theo hai đường khác nhau thì rối loạn xảy ra. Quy tắc này áp dụng được cho nhiều smartphone, nhiều máy tính và nhiều cloud storage.</p>
   <ol>
     <li>Điều đầu tiên của quy tắc này là phải chọn một máy tính thường dùng nhất làm máy tính chính và một cloud storage có chức năng tạo ổ đĩa cloud trong máy tính và synchronize tốt nhất làm cloud storage chính; các smartphone thì đều như nhau, không chính không phụ, vì không synchronize storage mà luôn luôn dùng file trong cloud. Sau khi chọn xong máy tính chính và cloud storage chính, chúng ta sẽ cài các phần mềm cloud synchronize của cloud chính vào tất cả máy tính, cài tất cả các phần mềm cloud synchronize vào máy tính chính, và cài app cloud chính vào tất cả các phone.</li>
@@ -340,12 +335,12 @@ data-ad-slot="3830899615">
     <li>Hình chụp bằng camera sẽ được chép vào ổ đĩa cloud tại một máy tính bất kỳ rồi từ đó sẽ được synchronize đến khắp nơi.</li>
   </ul>
   <p>Để đỡ tốn công cho các phần mềm synchronize, ta có thể tắt lựa chọn synchronize những folder không cần sửa nữa. Ví dụ như những folder chứa ảnh của các năm trước, sau khi tất cả ảnh cũ đã được chép ra các cloud thì tắt lựa chọn synchronize.</p>
-  <h1>Các cloud có thể dùng</h1>
+  <h2>Các cloud có thể dùng</h2>
   <p>Hiện nay tôi đang dùng <a href="https://my.pcloud.com/#page=register&invite=sxchZHAAiHy" target='_blank'>pCloud</a> làm cloud chính và <a href="http://mega.nz" target='_blank'>Mega</a> làm cloud phụ. pCloud cho dùng miễn phí đến 20GB. Mega cho dùng miễn phí đến 100GB.</p>
   <p>Ngoài ra còn có Google Drive dùng để tạo và giữ những file Doc và Sheet không hạn chế số lượng, Google Photos dùng để giữ ảnh đã được Google nén cũng không hạn chế số lượng. Có thể soạn các file Doc và Sheet trên máy tính với web browser hoặc trên điện thoại với app. Hình chụp bằng Android phone có thể được tự động cất vào Google Photos. Một nhược điểm của Google Drive là không có phần mềm synchronize với máy tính Linux.</p>
   <p>Tôi cũng đã dùng một máy laptop cũ yếu để làm cloud storage server riêng. Các bạn cũng có thể thử theo <a href="privcloudstor">cách này</a>.</p>
 
-  <h1>Dùng chung file với người khác</h1>
+  <h2>Dùng chung file với người khác</h2>
   <p>Tôi có thể dùng chung một phần cloud storage với người khác theo những cách sau:</p>
   <ul>
     <li>Gửi URL của file hoặc folder cho người khác download file của tôi thay vì phải đính kèm vào email.</li>
