--- a/kinh-nghiem/may-tinh/conferencecall.html
+++ b/kinh-nghiem/may-tinh/conferencecall.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Conference Call (Trang web LHBội)</title>
+<title>Conference Call</title>
 <meta name="description" content="Dịch vụ điện thoại hội nghị (Conference Call) của mạng điện thoại di động, 50 người nói chuyện với nhau cùng lúc" />
 <meta name="keywords" content="hữu ích, conference call, hội nghị, điện thoại, mobile, phone">
 <link rel="canonical" href="https://lehboi.github.io/kinh-nghiem/may-tinh/conferencecall">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,15 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
   <div class="body">
-    <div class="title">Conference Call</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -236,6 +230,7 @@ https://lehboi.github.io/kinh-nghiem/may-tinh/conferencecall
     </amp-facebook-like>
   </div>
 
+  <h1>Conference Call</h1>
 
 <p>Điện thoại di động có một dịch vụ cộng thêm rất tiện cho cuộc sống và rất dễ dùng là điện thoại hội nghị (conference call).
 <p>Ví dụ khi A đang nói chuyện qua điện thoại với B và cả 2 cần nghe ý kiến của C, khi đó A hoặc B nói "chờ một chút để tui kêu C tới đây", rồi bấm Hold trên điện thoại (trên màn hình cảm ứng hoặc các nút điều khiển), và bấm nút New call rồi gọi số điện thoại của C (lấy từ sổ điện thoại trong máy hoặc bấm thẳng dãy số), khi C đã trả lời rồi thì bấm Conference hoặc Merge, thế là cả ba đều nói và nghe lẫn nhau.
