--- a/kinh-nghiem/may-tinh/cryptocurrency.html
+++ b/kinh-nghiem/may-tinh/cryptocurrency.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Hỏi đáp về Cryptocurrency (Trang web LHBội)</title>
+<title>Hỏi đáp về Cryptocurrency</title>
 <meta name="description" content="Tìm hiểu Cryptocurrency: là gì, giữ như thế nào, trao đổi như thế nào, lợi/hại" />
 <meta name="keywords" content="cryptocurrency, bitcoin">
 <link rel="alternate" href="https://www.lhboi.name.vn/kinh-nghiem/may-tinh/cryptocurrency">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,15 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
   <div class="body">
-    <div class="title">Hỏi đáp về Cryptocurrency</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -236,8 +230,9 @@ https://lehboi.github.io/kinh-nghiem/may-tinh/cryptocurrency
     </amp-facebook-like>
   </div>
 
+<h1>Hỏi đáp về Cryptocurrency</h1>
 
-<h1>Cryptocurrency là gì?</h1>
+<h2>Cryptocurrency là gì?</h2>
 <div class="inlineleft"><amp-img alt="Bitcoin" width="200" src="/images/bitcoin-chip.jpg" height="128" layout="fixed"></amp-img></div>
 
 <p>Cryptocurrency (tiền mật mã) là một phát-minh của Satoshi Nakamoto trong năm 2008 về tiền-điện-tử trong mạng-lưới-ngang-hàng (A Peer-to-Peer Electronic Cash System.)</p>
@@ -269,11 +264,11 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-<h2>Ký bằng chữ ký điện tử thế nào?</h2>
+<h3>Ký bằng chữ ký điện tử thế nào?</h3>
 <p><a href="https://en.wikipedia.org/wiki/Digital_signature" target='_blank'>Chữ ký điện tử</a> là một cặp hai con số rất lớn: private key và public key. Tên gọi của hai con số đó đã cho biết: phải giữ kín private key và để public key cho mọi người biết.
 <br>Khi ký một thông điệp m, máy tính sẽ tính ra một chữ ký s từ m và private key rồi gửi s kèm theo m. Bên nhận được thông điệp sẽ dùng public key và m để tính ra xem kết quả có khớp với s hay không. Nếu không khớp nghĩa là m đã bị tráo trên đường truyền.</p>
 <p>Một ứng dụng khác của chữ ký điện tử là mã hoá thông điệp để giữ bí mật. Khi A muốn gửi một thông điệp hay file m cho B mà không cho bất kỳ ai khác dùng được thì A dùng public key của B để mã hoá thông điệp m thành m'. B nhận được thông điệp m' sẽ dùng private key để giải mã trở lại thành m. Bất kỳ người nào khác chép được m' trên đường truyền đều không thể giải mã được.</p>
-<h1>Bitcoin được giữ như thế nào?</h1>
+<h2>Bitcoin được giữ như thế nào?</h2>
 <p>Bitcoin được 'giữ' trong các wallet. Wallet gồm một software và file dữ liệu chứa những cặp public key và private key do software tạo ra. Public key là địa chỉ của wallet.
 <br>Private key là một con số nhị phân dài 256/128/512 bit được tự động sinh ra một cách ngẫu nhiên bằng software wallet cho người chủ của wallet. Software còn giúp tạo ra một dãy từ gợi nhớ gồm những từ có trong từ điển (mnemonic phrase, recovery phrase) mà từ dãy đó tìm trở lại private key của wallet. Mnemonic phrase cần được viết ra giấy và cất kỹ ở vài nơi để có thể lấy ra dùng khi cần.</p>
 <p>Tiền giấy và tiền kim loại thông thường được chính phủ phát hành theo những mệnh giá cố định. Bitcoin không như vậy. Những lượng Bitcoin lớn nhỏ khác nhau lưu hành trong mạng. Mỗi lượng Bitcoin là một chuỗi data ghi những giao dịch nó đã trải qua từ lúc được tạo ra. Khi một lượng Bitcoin x được chuyển từ wallet A sang wallet B, thì x được ghi thêm địa chỉ B và được ký bằng private key của A.
@@ -314,7 +309,7 @@ Wallet có thể được đặt trong
 Có loại wallet còn giữ luôn tất cả các block dữ liệu giao dịch của toàn hệ thống, đó là full node. Cho tới năm 2021 thì toàn bộ các block Bitcoin chiếm 350GB.
 <p>Ở hệ thống ngân hàng thường, tiền nằm trong các file trong hệ thống máy tính còn chữ ký thì nằm trên tay chủ tài khoản hoặc private key của chữ ký điện tử nằm trong máy hay USB do chủ tài khoản giữ. Tiền và chữ ký ở hai nơi khác nhau. Hacker phải biết được địa chỉ của tiền (số tài khoản) và chữ ký thì mới chuyển tiền đi nơi khác được.
 <br>Trong hệ thống Bitcoin, wallet chứa cả địa chỉ các Bitcoin lẫn private key. Hacker chép được file wallet là trở thành chủ của số Bitcoin trong wallet; hacker sẽ nhanh chóng chuyển hết Bitcoin trong wallet sang chỗ khác trước khi chủ wallet kịp biết.</p>
-<h1>Mua bán Bitcoin như thế nào?</h1>
+<h2>Mua bán Bitcoin như thế nào?</h2>
 <p>Người mua chuyển tiền cho người bán rồi người bán chuyển lượng Bitcoin vào địa chỉ do wallet của người mua sinh ra. Bên mua Bitcoin chỉ cần cho biết địa chỉ dưới dạng dãy chữ số hoặc một QR code là đủ.
 <br>Nếu bên bán Bitcoin gõ dãy chữ số địa chỉ sai thì Bitcoin sẽ quay trở lại wallet của bên bán trong hầu hết các trường hợp, có một xác suất rất nhỏ là địa chỉ gõ sai đó có thật và địa chỉ đó sẽ nhận được lượng Bitcoin thay vì người mua nhận được. Việc này tương tự như chuyển khoản giữa hai ngân hàng khác nhau: hầu hết các lệnh chuyển sai tên hoặc số tài khoản bên nhận đều không được thực hiện, chỉ có trường hợp tình cờ mà tên và số tài khoản sai lại trùng với một tài khoản thật thì tiền sẽ chuyển cho người đó. Người chuyển khoản sai có thể nhờ ngân hàng thu hồi lại tiền, chuyển sai Bitcoin thì không thể thu hồi lại được. Trong những hệ thống cryptocurrency không có cơ chế kiểm tra địa chỉ như Ethereum thì gửi tiền gửi sai địa chỉ luôn luôn đi mất.</p>
 <p>Việc ghi nhận Bitcoin chuyển địa chỉ khá chậm cho nên chỉ giao dịch với đối tác tin cậy để tránh mất tiền vì bị lừa.</p>
@@ -352,15 +347,15 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-<h1>Giữ wallet thế nào để khỏi mất?</h1>
+<h2>Giữ wallet thế nào để khỏi mất?</h2>
 <p>Wallet trong web server là mục tiêu của hacker. Hacker luôn tìm cách chiếm đoạt toàn bộ wallet trong từng server. Lượng Bitcoin chưa định bán thì nên chuyển từ web wallet vào cold wallet để tránh bị hack.</p>
 <p>Wallet trong máy tính và smartphone dễ bị mất cắp qua các phần mềm gián điệp. Để an toàn hơn, người ta để wallet trong các máy tính sạch và không nối mạng, gọi là cold wallet. Người ta đặt ra các thủ tục rất chặt chẽ khi dùng cold wallet trong máy tính để tránh bị mất cắp.</p>
 <p>Một rủi ro khác là hư hoặc mất vật chứa wallet: hư đĩa cứng máy tính, hư/mất smartphone, mất USB wallet. Do đó cần phải backup wallet trên một vật chứa khác, hoặc chép public key và private key ra giấy. Luôn luôn phải backup sau mỗi giao dịch, nếu restore từ bản backup cũ có thể bị mất những lượng Bitcoin mới có sau lần backup đó. Hư/mất wallet cũng giống như khi bị rớt mất bóp tiền hoặc khi tủ tiền giấy bị cháy. Bóp tiền hay tờ tiền thật bị rớt ngoài đường thì người qua đường có thể lượm được. Bitcoin bị mất do hư file wallet thì không có người nào lượm được, nó không bao giờ được dùng nữa.</p>
-<h1>Fork là gì?</h1>
+<h2>Fork là gì?</h2>
 <p>Khi một nhóm người tham gia hệ thống cryptocurrency quyết định thay đổi các thông số của thuật toán cho một nhu cầu nào đó thì một loại cryptocurrency mới ra đời từ loại cryptocurrency đang có. Điều này gọi là fork.</p>
 <p>Loại tiền mới ra đời có giá trị trao đổi ban đầu rất thấp, tuỳ theo thị hiếu mà nó tăng giá hay là bị lãng quên luôn. Thường thì sau khi fork, những người sở hữu lượng tiền gốc sẽ được tặng một lượng tiền mới.</p>
-<h1>Mặt trái của Bitcoin</h1>
-<h2>Sự đầu cơ</h2>
+<h2>Mặt trái của Bitcoin</h2>
+<h3>Sự đầu cơ</h3>
 <p>Mặc dù nó được gọi là currency, coin nhưng tôi thấy hiện nay nó không phải là một loại tiền vì không tiện để dùng nó mua các thứ khác. Mỗi lần chuyển một lượng Bitcoin dù nhỏ hay lớn đều tốn trung bình 10 phút, lâu hơn việc thanh toán bằng thẻ. Tôi cho rằng Bitcoin là một loại tài sản để <a href="/huu-ich/cach-dau-tu">đầu cơ</a>.</p>
 <!-- AMP In-article 1 -->
 <amp-ad
@@ -388,12 +383,12 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-<h2>Hao tốn năng lượng</h2>
+<h3>Hao tốn năng lượng</h3>
 <p>Các máy tính miner tranh nhau xử lý các giao dịch để cuối cùng chỉ có một miner được thưởng Bitcoin mới, việc tranh giành làm hao tốn rất nhiều điện năng. Có người tính rằng hiện nay để xử lý một giao dịch Bitcoin thì hao mất 200kWh điện. Và lượng điện đó ngày càng tăng vì càng có nhiều miner mới tham gia.</p>
-<h1>Một loại tiền mật mã cho mọi người</h1>
+<h2>Một loại tiền mật mã cho mọi người</h2>
 <p>Tôi vừa được biết một đồng tiền mật mã mới gọi là <b>π</b> (Pi). <a href="pi-network">Pi Network</a> là một dự án thí nghiệm phát triển một đồng tiền được sử dụng hàng ngày cho hàng tỷ người trên khắp thế giới. Mọi người đều có thể dễ dàng sử dụng π và tham gia làm dịch vụ trong Pi Network.</p>
 <p>Ý tưởng của Pi Network là tạo ra một cộng đồng vô cùng đông người sở hữu π và công nhận giá trị của π.</p>
-<h1>Tài liệu tham khảo</h1>
+<h2>Tài liệu tham khảo</h2>
 * <a href="https://blockgeeks.com/guides/what-is-cryptocurrency/" target='_blank'>What is cryptocurrency</a><br>
 * <a href="https://en.bitcoin.it/wiki/Help:FAQ" target='_blank'>Bitcoin Wiki</a>
 <div class="todiscuss">
