--- a/kinh-nghiem/may-tinh/fax.html
+++ b/kinh-nghiem/may-tinh/fax.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Fax từ Linux (Trang web LHBội)</title>
+<title>Fax từ Linux</title>
 <meta name="description" content="Fax file PDF/PS từ Linux qua faxmodem, không cần máy fax" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân, fax, linux">
 <link rel="canonical" href="https://lehboi.github.io/kinh-nghiem/may-tinh/fax">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,15 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
   <div class="body">
-    <div class="title">Fax file PDF/PS từ Linux qua faxmodem</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -236,6 +230,7 @@ https://lehboi.github.io/kinh-nghiem/may-tinh/fax
     </amp-facebook-like>
   </div>
 
+  <h1>Fax file PDF/PS từ Linux qua faxmodem</h1>
 <dt><b>Cài đặt:</b></dt>
 <dd>Ghostscript, mgetty, mgetty-sendfax, mgetty-viewfax.</dd>
 <dt><b>Tạo file PS có chữ Việt đủ dấu:</b></dt>
