--- a/kinh-nghiem/may-tinh/gnucash-dai-han.html
+++ b/kinh-nghiem/may-tinh/gnucash-dai-han.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>GnuCash dài hạn (Trang web LHBội)</title>
+<title>GnuCash dài hạn</title>
 <meta name="description" content="Dùng GnuCash ghi chép những tài sản dài hạn" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân">
 <link rel="canonical" href="https://lehboi.github.io/kinh-nghiem/may-tinh/gnucash-dai-han">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -210,14 +210,9 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
 
 
   <div class="body">
-    <div class="title">GnuCash dài hạn</div>
 
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
@@ -236,6 +231,7 @@ https://lehboi.github.io/kinh-nghiem/may-tinh/gnucash-dai-han
     </amp-facebook-like>
   </div>
 
+  <h1>GnuCash dài hạn</h1>
 <p><b>Nội dung dưới đây không còn thích hợp, mời bạn xem trang <a href="../../huu-ich/ke-hoach-tai-chinh/dau-tu-dai-han">Đầu tư dài hạn</a></b>.
 <hr>
 <p>Theo cách ghi sổ kế toán thông thường thì sổ ghi bằng GnuCash cũng nên được kết sổ định kỳ mỗi năm, ví dụ như kết sổ vào ngày 31 Tháng Mười Hai mỗi năm. Kết sổ tức là mở một file GnuCash mới với danh sách tài khoản giống như năm trước, các tài khoản trong nhóm Tài sản sở hữu và nhóm Khoản phải trả sẽ có số dư mở sổ bằng đúng số dư cuối cùng của năm trước, các tài khoản thuộc nhóm Thu nhập và nhóm Chi tiêu đều rỗng.</p>
@@ -247,7 +243,7 @@ https://lehboi.github.io/kinh-nghiem/may-tinh/gnucash-dai-han
 <li>File ghi chép các kế hoạch tích luỹ dài hạn. File mẫu tên là Dautu.gnucash, được download từ <a href="/download/" target="_blank">đây</a>. Việc tích luỹ phải gắn với đầu tư sinh lợi, dù là cách <a href="/huu-ich/dung-so-dau-tu" target="_blank">đầu tư đơn giản nhất</a> như là gửi tiết kiệm ở ngân hàng, do đó tên phai được đặt là Dautu. Đừng tích luỹ mà <a href="/huu-ich/tich-luy-dai-han" target="_blank">không sinh lợi</a>.</li>
 </ol>
 <p>Phần dưới đây là hướng dẫn cách ghi chép khi tích luỹ.</p>
-<h3>1. Các nhóm tài khoản trong Dautu.gnucash</h3>
+<h2>1. Các nhóm tài khoản trong Dautu.gnucash</h2>
 <p>Sổ ghi chép việc đầu tư dài hạn gồm có 5 nhóm tài khoản:</p>
 <ol><li>Nhóm <b>Tài sản sở hữu</b> gồm các loại tài sản tích luỹ dài hạn như các hợp đồng bảo hiểm nhân thọ, các tài khoản quỹ đầu tư trái phiếu, các tài khoản quỹ đầu tư cổ phiếu, các tài khoản giao dịch chứng khoán, các căn nhà, lô đất.<br />
 Tôi không ghi các sổ tiết kiệm vào file này vì tôi không dùng sổ tiết kiệm từ mấy năm nay rồi. Tôi dùng quỹ đầu tư trái phiếu thay cho các sổ tiết kiệm, nó hay hơn sổ tiết kiệm ở chỗ không có kỳ hạn, muốn rút lúc nào cũng được, chưa rút thì nó tiếp tục sinh lời.</li>
@@ -258,12 +254,12 @@ Khi mua và bán cổ phiếu, người đầu tư cũng tốn phí giao dịch;
 <li>Nhóm tài khoản ghi nhận <b>Lợi nhuận</b> từ tài sản đầu tư như là cổ tức, tiền cho thuê nhà… với mục đích chỉ để ghi sổ và xem báo cáo.</li>
 </ol>
 <p>Sau khi download file mẫu Dautu.gnucash từ <a href="/download/" target="_blank">đây</a> về, bạn tạo thêm các tài khoản con trong các nhóm tài khoản tương ứng với các khoản tích luỹ của gia đình.</p>
-<h3>2. Cách ghi mỗi loại giao dịch</h3>
+<h2>2. Cách ghi mỗi loại giao dịch</h2>
 <p>Mọi giao dịch từ khi <i>bắt đầu tích luỹ</i> đều cần được ghi vào file này. Ghi đầy đủ và chính xác thì các báo cáo càng chính xác. Nếu bạn đang có những khoản tích luỹ trước khi bắt đầu dùng GnuCash thì hãy cố gắng ghi lại từ ngày đầu, nếu không thể ghi đầy đủ các giao dịch đã qua thì đành chấp nhập báo cáo cho khoản đầu tư đó không chính xác tuyệt đối.
 <br>Bên cạnh file Dautu.gnucash này, bạn còn có file ghi chép thu chi hàng ngày trong năm ví dụ giadinh2015.gnucash. Hai file này có liên hệ với nhau:</p>
 <ul><li>Mỗi khoản tiền đưa vào tích luỹ ghi trong file Dautu.gnucash đều phải được ghi như một chi phí trong file giadinh20xx.gnucash</li>
 <li>Mỗi khoản tiền rút ra từ các khoản tích luỹ trong file Dautu.gnucash đều được ghi như một thu nhập trong file giadinh20xx.gnucash</li></ul>
-<h4>2.1. Đóng phí bảo hiểm nhân thọ</h4>
+<h3>2.1. Đóng phí bảo hiểm nhân thọ</h3>
 <p>Mỗi giao dịch đóng phí bảo hiểm nhân thọ thường được ghi làm hai lần:
 <ol><li>Khi đóng tiền thì ghi ngay giao dịch chuyển toàn bộ số tiền đã đóng từ tài khoản <i>Đưa vào:Bảo hiểm</i> sang tài khoản <i>Chi phí:Bảo hiểm</i>.</li>
 <li>Khi nhận được thông báo hàng năm về kết quả của từng hợp đồng bảo hiểm, ghi tăng tài sản bảo hiểm và ghi giảm chi phí bảo hiểm, ví dụ tăng <i>Tài sản sở hữu:Bảo hiểm nhân thọ:Manulife:Cho tuổi thần tiên con đầu</i> và giảm <i>Chi phí:Bảo hiểm</i>, số tiền ghi sổ là khoản chênh lệch giữa kết quả năm nay so với kết quả năm trước.</li>
@@ -271,40 +267,40 @@ Khi mua và bán cổ phiếu, người đầu tư cũng tốn phí giao dịch;
 <li>Với loại bảo hiểm nhân thọ kiểu truyền thống, thông báo kết quả hợp đồng sẽ ghi các thông tin: <i>giá trị tiền mặt</i> của hợp đồng tại ngày thông báo, bảo tức (hay tiền lời) tích luỹ đến ngày thông báo, phiếu tiền mặt và lãi tích luỹ đến ngày thông báo. Tổng các số tiền trên là giá trị mới của hợp đồng bảo hiểm, lấy tổng đó trừ cho giá trị năm ngoái để ghi tăng tài sản bảo hiểm và ghi giảm chi phí bảo hiểm. Hiệu số đó thường là số dương, nó có thể âm nếu trong năm qua có nhận tiền mặt (bảo tức, phiếu tiền mặt) từ hợp đồng. Cũng có công ty không thông báo giá trị tiền mặt hàng năm vì số đó đã được tính trước cho suốt thời hạn hợp đồng và ghi vào trang hợp đồng, bạn có thể mở bộ hợp đồng ra để đọc số ứng với năm hiện tại.</li>
 <li>Với loại bảo hiểm nhân thọ liên kết quỹ đầu tư thì chúng ta ghi theo kiểu quỹ đầu tư, không ghi kiểu bảo hiểm nhân thọ.</li>
 </ol>
-<h4>2.2. Nhận tiền mặt từ hợp đồng bảo hiểm nhân thọ</h4>
+<h3>2.2. Nhận tiền mặt từ hợp đồng bảo hiểm nhân thọ</h3>
 <p>Một số hợp đồng bảo hiểm nhân thọ cho phép rút một phần tiền khi chưa đáo hạn. Hợp đồng thuộc kiểu truyền thống cho phép rút bảo tức, phiếu tiền mặt. Hợp đồng thuộc kiểu liên kết chung cho phép rút tiền từ tài khoản.
 <br>Khi rút tiền từ hợp đồng bảo hiểm nhân thọ, ta ghi giao dịch chuyển tiền từ tài khoản tài sản bảo hiểm sang tài khoản đã rút ra, ví dụ giảm <i>Tài sản sở hữu:Bảo hiểm nhân thọ:Manulife:Cho tuổi thần tiên con đầu</i> và tăng tài khoản <i>Đã rút ra:Bảo hiểm nhân thọ</i>.</p>
-<h4>2.3. Mua cổ phiếu</h4>
+<h3>2.3. Mua cổ phiếu</h3>
 <p>Khi mua cổ phiếu trên thị trường chứng khoán, tài khoản tiền của ta ở ngân hàng hoặc ở công ty chứng khoán sẽ giảm một lượng bằng giá giao dịch nhân với số cổ phiếu và giảm thêm một lượng tỉ lệ với số tiền giao dịch gọi là phí giao dịch.
 <br>Chúng ta mở tài khoản <i>Tài sản sở hữu:Đầu tư:Cổ phiếu:Tên cổ phiếu</i>, thêm một dòng mới, ghi số cổ phiếu mới mua vào cột Cổ phiếu và ghi tổng số tiền bị trừ trong tài khoản vào cột Bên nợ, Gnucash sẽ tính ra giá mua gồm cả phí, chọn tài khoản <i>Đưa vào:Đầu tư:Cổ phiếu</i> trong dòng đối ứng và số tiền trong cột Bên có bằng số tiền bị trừ trong tài khoản.</p>
-<h4>2.4. Bán cổ phiếu</h4>
+<h3>2.4. Bán cổ phiếu</h3>
 <p>Khi bán cổ phiếu trên thị trường chứng khoán, tài khoản tiền của ta ở ngân hàng hoặc ở công ty chứng khoán sẽ tăng một lượng bằng giá giao dịch nhân với số cổ phiếu và giảm một lượng tỉ lệ với số tiền giao dịch gồm phí giao dịch và thuế thu nhập cá nhân.
 <br>Chúng ta mở tài khoản <i>Tài sản sở hữu:Đầu tư:Cổ phiếu:Tên cổ phiếu</i>, thêm một dòng mới, ghi số cổ phiếu mới bán với dấu trừ vào cột Cổ phiếu và ghi tổng số tiền nhận được trong tài khoản (đã trừ phí và thuế) vào cột Bên có, Gnucash sẽ tính ra giá bán gồm cả phí và thuế, chọn tài khoản <i>Đã rút ra:Cổ phiếu:Tên cổ phiếu</i> trong dòng đối ứng và số tiền trong cột Bên nợ bằng số tiền bị trừ trong tài khoản.</p>
-<h4>2.5. Nhận cổ tức</h4>
+<h3>2.5. Nhận cổ tức</h3>
 <p>Khi nhận cổ tức, tài khoản tiền của ta ở ngân hàng hoặc ở công ty chứng khoán sẽ tăng một lượng bằng cổ tức nhân với số cổ phiếu và giảm 5% thuế thu nhập cá nhân.
 <br>Chúng ta mở tài khoản <i>Đã rút ra:Cổ phiếu:Tên cổ phiếu,</i> thêm một dòng mới, ghi số tiền thực nhận vào cột Bên nợ, chọn tài khoản đối ứng là <i>Lợi nhuận:Cổ tức</i> và ghi số tiền thực nhận vào cột Bên có.</p>
-<h4>2.6. Mua đơn vị quỹ đầu tư</h4>
+<h3>2.6. Mua đơn vị quỹ đầu tư</h3>
 <p>Cách ghi khi mua đơn vị quỹ đầu tư gần giống như khi mua cổ phiếu, chỉ hơi khác là:</p>
 <ul><li>nhà đầu tư đặt lệnh mua với số tiền đã biết và chỉ biết số đơn vị quỹ mua được sau khi công ty quản lý quỹ xử lý phiên giao dịch</li>
 <li>số đơn vị quỹ mua được là số lẻ đến 1/100 hay 1/10000 đơn vị</li></ul>
 <p>Khi ghi thì chọn tên tài khoản quỹ đầu tư thay vì chọn tên cổ phiếu, và tài khoản <i>Đưa vào:Đầu tư:Quỹ đầu tư</i>.</p>
-<h4>2.7. Bán đơn vị quỹ đầu tư</h4>
+<h3>2.7. Bán đơn vị quỹ đầu tư</h3>
 <p>Cũng tương tự như bán cổ phiếu.</p>
-<h4>2.8. Ghi chi phí trong hợp đồng bảo hiểm nhân thọ liên kết quỹ đầu tư</h4>
+<h3>2.8. Ghi chi phí trong hợp đồng bảo hiểm nhân thọ liên kết quỹ đầu tư</h3>
 <p>Ngoài giao dịch mua/bán đơn vị quỹ, tài khoản đơn vị quỹ trong hợp đồng BHNT liên kết quỹ đầu tư còn bị giảm số đơn vị quỹ hàng tháng để trả phí bảo hiểm rủi ro và phí quản lý hợp đồng.
 <br>Mỗi năm công ty bảo hiểm gửi một báo cáo về hợp đồng, trong đó có ghi rõ số đơn vị quỹ giảm mỗi tháng. Chúng ta ghi giảm vào tài khoản <i>Tài sản sở hữu:Đầu tư:Cổ phiếu:Tên quỹ</i> như bán đơn vị quỹ nhưng tài khoản đối ứng không phải là <i>Đã rút ra:</i> mà là <i>Chi phí:Bảo hiểm</i>.</p>
-<h4>2.9. Mua bất động sản</h4>
+<h3>2.9. Mua bất động sản</h3>
 <p>Khi mua một bất động sản mới, tạo một tài khoản con dưới <i>Tài sản sở hữu:BĐS</i> và ghi chuyển món tiền từ tài khoản <i>Đưa vào:BĐS</i> sang tài khoản mới tạo.
 <br>Khi phải chi thêm tiền cho bất động sản trong thời gian sở hữu nó, ví dụ như sửa nhà, nộp thuế…, ta cũng ghi thêm một dòng chuyển tiền như trên.</p>
-<h4>2.10. Thu nhập từ bất động sản</h4>
+<h3>2.10. Thu nhập từ bất động sản</h3>
 <p>Nếu bất động sản đem lại thu nhập, ví dụ như cho thuê, thì ghi tương tự như khi nhận cổ tức: ghi chuyển món tiền từ tài khoản <i>Lợi nhuận:Cho thuê</i> sang tài khoản <i>Đã rút ra:BĐS:tên bđs</i>.</p>
-<h4>2.11. Định giá lại bất động sản</h4>
+<h3>2.11. Định giá lại bất động sản</h3>
 <p>Khi giá trị của bất động sản thay đổi, ta ghi chuyển món tiền chênh lệch từ tài khoản <i>Orphaned Gains-VND</i> sang tài khoản <i>Tài sản sở hữu:BĐS:tên tài sản</i>.</p>
-<h4>2.12. Bán bất động sản</h4>
+<h3>2.12. Bán bất động sản</h3>
 <p>Trước khi ghi giao dịch bán bất động sản, ta ghi một giao dịch định giá lại BĐS cho đúng với giá giao dịch. Kế đó, ghi chuyển món tiền từ tài khoản <i>Tài sản sở hữu:BĐS:tên tài sản</i> sang <i>Đã rút ra:BĐS</i>.</p>
 
-<h3>3. Xem báo cáo kết quả đầu tư</h3>
-<h4>3.1. Kết quả của một khoản đầu tư</h4>
+<h2>3. Xem báo cáo kết quả đầu tư</h2>
+<h3>3.1. Kết quả của một khoản đầu tư</h3>
 <p>Kết quả của một việc đầu tư tài sản được thể hiện bằng tổng số tiền đã đưa vào tài sản đó từ đầu đến lúc báo cáo, giá trị tài sản đó ở thời điểm báo cáo, tổng lợi nhuận đã rút ra từ tài sản đó từ đầu đến lúc báo cáo.
 <br>Để xem được ba con số trên trong một bản báo cáo thì ta dùng loại báo cáo nhiều phần, mỗi phần cho một con số.</p>
 <ul><li>Trong menu <b>Báo cáo</b>, chọn <b>Mẫu và tự chọn</b><b>→Báo cáo đa cột tự chọn</b>,</li>
@@ -316,7 +312,7 @@ Khi mua và bán cổ phiếu, người đầu tư cũng tốn phí giao dịch;
 <li>bấm vào Tuỳ chọn sửa ở cuối phần Tóm tắt tài khoản trong trang báo cáo, bấm vào tab Tài khoản rồi chọn tài sản cần xem báo cáo, ví dụ VNM, bấm Ok</li>
 <li>bấm vào Tuỳ chọn sửa ở cuối phần Báo cáo giao dịch thứ nhất, bấm vào tab Chung, ghi Tên  báo cáo là Tiền vào, chọn Ngày bắt đầu là ngày đầu tiên đưa tiền vào tài sản này, Ngày kết thúc là ngày cuối cùng bán hết tài sản hoặc ngày hôm nay nếu chưa bán hết, bấm tab Tài khoản, chọn tài khoản con dưới <i>Đưa vào</i> ghi tiền đưa vào tài sản đầu tư cần xem, chọn tài khoản cần xem báo cáo trong danh sách Lọc theo, chọn kiểu lọc là Bao gồm giao dịch, bấm Ok</li>
 <li>bấm vào Tuỳ chọn sửa ở cuối phần Báo cáo giao dịch thứ hai, bấm vào tab Chung, ghi Tên  báo cáo là Tiền ra, chọn Ngày bắt đầu là ngày đầu tiên đưa tiền vào tài sản này, Ngày kết thúc là ngày cuối cùng bán hết tài sản hoặc ngày hôm nay nếu chưa bán hết, bấm tab Tài khoản, chọn tài khoản con dưới <i>Đã rút ra</i> ghi tiền rút ra từ tài sản đầu tư cần xem, bấm Ok</li></ul>
-<h4>3.2. Kết quả toàn bộ việc tích luỹ</h4>
+<h3>3.2. Kết quả toàn bộ việc tích luỹ</h3>
 <p>Tổng tài sản tích luỹ được phải tăng dần theo thời gian giống như mô hình tính toán ở <a href="/huu-ich/tich-luy-4">trang này</a>. Để xem tài sản của bạn tăng như thế nào thì tạo report như sau:</p>
 <ul><li>Trong menu <b>Báo cáo</b>, chọn <b>Tài sản và Tài sản nợ</b><b>→Đồ thị thanh Tài sản</b>,</li>
 <li>trong trang báo cáo mới tạo, bấm nút <b>Tuỳ chọn</b>,</li>
