--- a/kinh-nghiem/may-tinh/gnucash.html
+++ b/kinh-nghiem/may-tinh/gnucash.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>GnuCash (Trang web LHBội)</title>
+<title>GnuCash</title>
 <meta name="description" content="Giới thiệu GnuCash, phần mềm để kiểm soát thu chi, quản lý tài sản gia đình" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân">
 <link rel="alternate" href="https://www.lhboi.name.vn/kinh-nghiem/may-tinh/gnucash">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,16 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
   <div class="body">
-    <div class="title">GnuCash</div>
-<div class="right">Viết lần đầu trong Tháng Hai, 2012.</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -237,6 +230,8 @@ https://lehboi.github.io/kinh-nghiem/may-tinh/gnucash
     </amp-facebook-like>
   </div>
 
+  <h1>GnuCash</h1>
+<div class="right">Viết lần đầu trong Tháng Hai, 2012.</div>
 <p>Tôi dùng chương trình <a href="https://www.gnucash.org/" target="_blank">GnuCash</a> để quản lý tiền và tài sản của gia đình.</p>
 <div><div class="inlineleft"><a href="https://www.gnucash.org/" target='_blank'><amp-img alt="gnucash" height="19" src="/images/gnucashbanner5df44.png" width="100" height="19" layout="fixed"></amp-img></a></div>
  GnuCash là phần mềm mã nguồn mở, chạy được trên Linux lẫn Windows. Có một bản GnuCash cho Android, đó là phương tiện ghi chép các giao dịch, cuối ngày hay cuối tuần chuyển các ghi chép đó sang GnuCash trên computer. GnuCash giúp quản lý bốn thứ chính là: tài sản, nợ, thu nhập, chi tiêu của gia đình. Bốn khoản chính trên được chia thành nhiều tài khoản để quản lý cụ thể từng món nhỏ, ví dụ tiền trong bóp, tài khoản thanh toán, sổ tiết kiệm, cổ phiếu, tài sản, chi ăn uống, chi điện nước, tiền lương, tiền lãi tiết kiệm… Mỗi tài khoản có một mã số để có thể phân biệt chính xác những tài khoản con có tên giống nhau.</div>
