--- a/kinh-nghiem/may-tinh/goi-cuoc-di-dong-noi-mang.html
+++ b/kinh-nghiem/may-tinh/goi-cuoc-di-dong-noi-mang.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Gói cước di động nội mạng (Trang web LHBội)</title>
+<title>Gói cước di động nội mạng</title>
 <meta name="description" content="Các gói cước di động nội mạng, rẻ hơn giá cước bình thường" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân">
 <link rel="canonical" href="https://lehboi.github.io/kinh-nghiem/may-tinh/goi-cuoc-di-dong-noi-mang">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -140,6 +140,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 <script async custom-element="amp-accordion" src="https://cdn.ampproject.org/v0/amp-accordion-0.1.js"></script>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -211,15 +212,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
   <div class="body">
-    <div class="title">Gói cước di động nội mạng</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -237,6 +231,7 @@ https://lehboi.github.io/kinh-nghiem/may-tinh/goi-cuoc-di-dong-noi-mang
     </amp-facebook-like>
   </div>
 
+  <h1>Gói cước di động nội mạng</h1>
 <p>Thông thường thì gọi nội mạng rẻ hơn 200₫/phút so với gọi liên mạng. Có cách gọi nội mạng với giá rất rẻ, chỉ 71₫/phút, rẻ hơn gọi điện thoại cố định nữa, đó là mua những gói cước nội mạng. Để tạo thói quen dùng điện thoại ở các thuê bao ít dùng, các công ty điện thoại di động cung cấp những gói cước gọi, nhắn tin nội mạng, data với giá rất rẻ trong một thời gian nhất định. Khi thuê bao đã quen dùng rồi thì công ty điện thoại không khuyến mãi nữa! Hãy chọn dùng các gói dưới đây một cách hợp lý để <a href="/huu-ich/chi-tieu">tiết kiệm</a> tiền điện thoại.</p>
 <p>Dưới đây là bảng tóm tắt các gói cước đó (có thể có gói không còn được cung cấp, nhắn tin thử mới biết, nếu không mua được cũng không bị trừ tiền trong tài khoản). Bấm vào tên mạng di động để xem các gói của mạng đó.</p>
 <!-- AMP In-article 1 -->
@@ -267,11 +262,11 @@ data-ad-slot="3830899615">
 
 <amp-accordion>
 <section expanded>
-<h3>Vinaphone</h3>
+<h2>Vinaphone</h2>
 <div>
 <amp-accordion>
 <section expanded>
-<h4>Thoại và nhắn tin</h4>
+<h3>Thoại và nhắn tin</h3>
 <div>
 <table class="withborder">
 <tbody>
@@ -419,7 +414,7 @@ data-ad-slot="3830899615">
 </div>
 </section>
 <section>
-<h4>Mobile Internet</h4>
+<h3>Mobile Internet</h3>
 <div>
 <table class="withborder">
 <tbody>
@@ -465,7 +460,7 @@ data-ad-slot="3830899615">
 </div>
 </section>
 <section>
-<h4>EzCom</h4>
+<h3>EzCom</h3>
 <div>
 <table class="withborder">
 <tbody>
@@ -570,11 +565,11 @@ data-ad-slot="3830899615">
 
 <amp-accordion>
 <section expanded>
-<h3>Viettel</h3>
+<h2>Viettel</h2>
 <div>
 <amp-accordion>
 <section>
-<h4>Thoại và nhắn tin</h4>
+<h3>Thoại và nhắn tin</h3>
 <div>
 <table class="withborder">
 <tbody>
@@ -750,7 +745,7 @@ data-ad-slot="3830899615">
 </div>
 </section>
 <section>
-<h4>Mobile Internet</h4>
+<h3>Mobile Internet</h3>
 <div>
 <table class="withborder">
 <tbody>
@@ -820,11 +815,11 @@ data-ad-slot="3830899615">
 
 <amp-accordion>
 <section expanded>
-<h3>Mobifone</h3>
+<h2>Mobifone</h2>
 <div>
 <amp-accordion>
 <section>
-<h4>Thoại và nhắn tin</h4>
+<h3>Thoại và nhắn tin</h3>
 <div>
 <table class="withborder">
 <tbody>
@@ -967,7 +962,7 @@ data-ad-slot="3830899615">
 </div>
 </section>
 <section>
-<h4>Mobile Internet</h4>
+<h3>Mobile Internet</h3>
 <div>
 <table class="withborder">
 <tbody>
