--- a/kinh-nghiem/may-tinh/googlemaps.html
+++ b/kinh-nghiem/may-tinh/googlemaps.html
@@ -67,7 +67,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -140,6 +140,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -211,16 +212,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
 <div class="body">
-  <div class="title">Ứng dụng Google Maps</div>
-  <div class="right">Soạn lần đầu ngày 25/07/2018</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -238,11 +231,13 @@ data-ad-slot="5275186684">
     </amp-facebook-like>
   </div>
 
+  <h1>Ứng dụng Google Maps</h1>
+  <div class="right">Soạn lần đầu ngày 25/07/2018</div>
   <p>Google là một đại công ty rất giỏi trong việc kiếm tiền bằng cách dùng công sức miễn phí của hàng tỷ người trên thế giới. Google chỉ cần tạo ra công cụ, hàng tỷ người dùng công cụ đó tạo ra tài nguyên (data) cho Google khai thác ra tiền.</p>
-  <h1>Google Maps</h1>
+  <h2>Google Maps</h2>
   <p><a href="https://maps.google.com" target='_blank'>Google Maps</a> là một trong những công cụ như vậy. Tôi đã từng thuộc vào nhóm người tạo ra nhiều data cho Google Maps ở Saigon, và Google còn gửi <a href="https://drive.google.com/open?id=1WqIv1DqO1g-uZDZsyIJfSKDHSaoMEbk4cMUQ8Mk_68orzoH3PYN4abyajuX0" target='_blank'>giấy khen</a> cho tôi nữa.
   <br>Khoảng 9-10 năm trước, Google Maps cho người dùng vẽ đường, đánh dấu các điểm công cộng, doanh nghiệp vào bản đồ. Khi data đã tương đối đủ, nhiều người thường xuyên dùng Google Maps hơn là đã đến lúc Google kiếm tiền và cũng là lúc có nhiều người lạm dụng Google Maps bằng cách đánh dấu doanh nghiệp của họ khắp những chỗ đông người (trong Google Maps) để cho nhiều người thấy tên doanh nghiệp. Google biết những việc lạm dụng đó nhưng họ không có cách hữu hiệu để ngăn chặn, việc ngăn chặn chỉ đến từ những người ở không làm chuyện bao đồng như tôi đi xoá rác trong Google Maps. Nhưng số người như tôi thì quá ít so với số người lạm dụng nên data trong Google Maps trở nên kém tin cậy. Gần một năm nay, có một sự thay đổi chính sách gì đó trong Google làm cho những người thường xoá rác bị trói tay, không xoá được nữa, tình hình càng tệ hại hơn.</p>
-  <h1>Dùng Google Maps để tìm đường đi</h1>
+  <h2>Dùng Google Maps để tìm đường đi</h2>
   <p>Bây giờ chỉ còn một loại thông tin tương đối đúng trong Google Maps là thông tin giao thông dùng để tìm đường đi. Người ta có thể dùng app Google Maps trong smartphone để tìm đường đi từ A đến B bằng các phương tiện: hai cẳng, hai bánh, bốn bánh, sáu bánh (xe buýt), hoặc gọi Grab. Nếu điểm A và B được định vị chính xác thì Google Maps đề nghị lộ trình ngắn nhất, nếu lúc đó Google Maps có nối đến server qua Internet thì nó sẽ biết được tình trạng lưu thông tức thời và tìm ra đường đi nhanh nhất. Có rất nhiều app trên smartphone dùng data của Google Maps để hoạt động.</p>
   <p>Không những chỉ đường trên màn hình, <a href="https://play.google.com/store/apps/details?id=com.google.android.apps.maps" target='_blank'>app Google Maps trong smartphone</a> còn chỉ đường bằng tiếng nói. Ta chỉ cần đeo headphone vào tai, bỏ smartphone trong túi, Google Maps sẽ nói đi thẳng, sắp quẹo, quẹo ngay… Tôi rất thường dùng Google Maps theo cách này khi sắp đi đến chỗ lạ.</p>
 <!-- AMP In-article 1 -->
@@ -271,7 +266,7 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-  <h2>Cần đánh dấu địa điểm chính xác</h2>
+  <h3>Cần đánh dấu địa điểm chính xác</h3>
   <p>Tuy nhiên, nếu người dùng chỉ có địa chỉ và không biết chính xác vị trí điểm B thì rất dễ đi đến sai chỗ vì địa chỉ ở Việt Nam rất rối. Trường hợp người ta đặt xe Grab đến điểm B theo địa chỉ có thể dẫn đến những tình huống phiền phức: người đặt xe và người lái xe Grab không cùng nghĩ giống nhau.</p>
   <p>Cách tốt nhất để tránh bị dẫn đường sai là <strong>đánh dấu địa điểm chính xác</strong> những nơi cần đến trong Google Maps và để Google Maps chuyển địa điểm đó cho Grab. Có nhiều cách để đánh dấu địa điểm chính xác.</p>
   <div class="flright"><amp-img alt="Màn hình app Google Maps" src="/images/ContactsInMaps.jpg" width="360" height="640" layout="responsive"></amp-img></div>
@@ -310,9 +305,9 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-  <h2>Đặt xe Grab từ Google Maps</h2>
+  <h3>Đặt xe Grab từ Google Maps</h3>
   <p>Khi đã có toạ độ B chính xác, ta để cho Google Maps app tìm đường đến B theo cách gọi Grab rồi chọn mở Grab từ Google Maps, Grab sẽ có thông tin chính xác của nơi cần đến. Tôi đã có lần ngồi ở C và đặt Grab cho người nhà đi từ A đến B một cách dễ dàng trong khi người nhà không biết địa chỉ B lẫn đường đi đến B. Một lần khác, tôi đi đến điểm hẹn gặp một người bạn bằng cách đeo headphone rồi nghe theo chỉ dẫn của Google Maps app đi đến địa điểm mà bạn đã gửi link cho tôi.</p>
-  <h1>Dùng Google Maps để liên tục thông báo vị trí cho người khác</h1>
+  <h2>Dùng Google Maps để liên tục thông báo vị trí cho người khác</h2>
   <p>Có rất nhiều tình huống mà bạn cần biết người thân/quen của mình đang ở đâu ngay lúc này. Ví dụ như:</p>
   <ul>
     <li>người thân/quen đang đi đến gặp bạn, bạn muốn biết người đó đang đi đến đâu,</li>
