--- a/kinh-nghiem/may-tinh/in-phun.html
+++ b/kinh-nghiem/may-tinh/in-phun.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>In phun (Trang web LHBội)</title>
+<title>In phun</title>
 <meta name="description" content="Kinh nghiệm dùng máy in phun: bơm mực, rửa đầu phun, mực liên tục" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân">
 <link rel="canonical" href="https://lehboi.github.io/kinh-nghiem/may-tinh/in-phun">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,15 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
   <div class="body">
-    <div class="title">In phun</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -236,7 +230,8 @@ https://lehboi.github.io/kinh-nghiem/may-tinh/in-phun
     </amp-facebook-like>
   </div>
 
-<h3>Bơm mực</h3>
+  <h1>In phun</h1>
+<h2>Bơm mực</h2>
 <p>Trong mỗi cartridge mực của máy in phun Epson có một IC đếm số mực đã phun ra. Khi phun <em>gần hết</em> mực thì IC đó báo là hết mực rồi, không dùng cartridge này nữa. Driver của máy in này trong Windows luôn luôn hiện lượng mực còn trong cartridge để người dùng biết mà chuẩn bị tiền mua cartridge mới. Giá một cartridge mực đen T038 là 8USD và một cartridge mực 3 màu T039 là 12USD.</p>
 <p>Để <a href="/huu-ich/ke-hoach-tai-chinh/">tiết kiệm</a> thì đừng mua cartridge mới mà hãy dùng một dụng cụ do Trung Quốc làm để reset IC của cartridge đó, in tiếp cho đến khi không ra chữ (được chừng 10-20 trang), rồi mua mực bơm vào. Thế là có một cartridge đầy mực để in tiếp.</p>
 <p>Một ống 20ml mực giá 20.000₫ (có sẵn kim tiêm, đen hay màu cũng đồng giá). Mỗi lần bơm 10ml mực vào cartridge. In thử file pdf 150 trang chữ xong, driver báo đã xài hết nửa cartridge mực đen. Tính ra tốn hết 5.000₫ mực và chừng 6.000₫ giấy! Thứ hao nhất là thời gian đứng xếp giấy vào máy in và lấy giấy từ máy in ra! Nếu mua mực trong lọ 150ml thì rẻ hơn nữa.</p>
@@ -267,11 +262,11 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-<h3>Một số hướng dẫn của Epson</h3>
+<h2>Một số hướng dẫn của Epson</h2>
 <p>Nên tắt máy bằng nút tắt trên máy, đừng tắt bằng cách ngắt nguồn điện. Vì khi tắt bằng nút của máy cụm đầu in sẽ được đưa về chỗ bảo quản cho mực trong đầu in lâu khô; vậy thì đỡ phải làm sạch đầu in.</p>
 <p>Khi không dùng máy thì nên tắt máy. Máy in ở trạng thái bật sẽ thường xuyên tự làm sạch đầu in nên sẽ hao mực.</p>
 <p>Chiến lược bán hàng của các hãng sản xuất máy in phun là bán một số dòng máy với giá thật rẻ, giá máy mới chỉ hơi hơn giá của bộ các cartridge mực gắn trong đó một chút. Do giá máy rẻ như vậy nên máy không bền lắm, mỗi khi có trục trặc thì tiền sửa máy cao gần bằng tiền mua máy mới. Nghĩ lại thấy việc quyết định mua máy multifunction in-scan này không phải là quyết định tối ưu, vì máy in thì không bền mà máy scan thì có thể bền hơn. Máy multifunction này chỉ có ưu điểm là gọn và có thể photocopy mà không cần máy tính.</p>
-<h3>Rửa đầu phun</h3>
+<h2>Rửa đầu phun</h2>
 <p>Máy in phun để lâu không dùng sẽ khô mực ở đầu phun, in không ra đủ nét nữa. Epson khuyên nên in đều đặn mỗi tháng ít nhất một trang. <br />
 Có lần tôi để lâu không in nên đầu phun màu đen bị nghẹt 2 điểm, dùng chức năng làm sạch đầu phun của máy in vài lần cũng không hết nghẹt. Tìm trong Internet thấy có người chỉ cách dùng nước lau kính để làm sạch. Họ dùng nước lau kính hiệu Windex của Mỹ, tôi dùng nước lau kính Việt Nam cũng tốt.</p>
 <p>Cách dùng:</p>
@@ -343,7 +338,7 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-<h3>Mực liên tục</h3>
+<h2>Mực liên tục</h2>
 <p>Hệ thống mực liên tục gồm có những cartridge giả gắn trong máy và những ống dẫn mực từ những bình mực bên cạnh máy vào những cartridge giả. Những ống dẫn bằng nhựa mềm trong mờ, đường kính chừng 2mm. Khi đầu phun mang cartridge chạy trong máy, ống dẫn sẽ di chuyển theo. Lúc ống còn mới thì nó còn đàn hồi, không bị rũ xuống và vướng vào bên dưới đầu phun. Theo thời gian, ống giảm độ đàn hồi và sẽ thường bị vướng dưới đầu phun. Do đầu phun chạy rất nhanh nên tiếng ồn khi bị vướng nghe rất đáng sợ. Tôi có một máy Epson T11 bị như vậy.</p>
 <p>Một lần vào tiệm bán máy tính có trưng bày máy in phun dùng mực liên tục của chính Epson, tôi mở nắp máy lên xem Epson dẫn mực vào như thế nào. Các ống dẫn mực trong máy này không khác gì ở hệ thống mực liên tục thường gặp. Tuy nhiên, Epson có cách chống vướng ống mực dưới đầu phun bằng cách cho một dải nhựa kẹp theo các ống mực, dải nhựa này sẽ giúp tăng độ đàn hồi.
 <br>Áp dụng cách đó vào máy in T11 ở nhà, tôi cắt lấy một dải từ miếng bìa hồ sơ bằng nhựa và dán kèm vào các ống dẫn mực. Thế là hết vướng!</p>
