--- a/kinh-nghiem/may-tinh/nhiet-do.html
+++ b/kinh-nghiem/may-tinh/nhiet-do.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Nhiệt độ CPU Pentium 4 (Trang web LHBội)</title>
+<title>Nhiệt độ CPU Pentium 4</title>
 <meta name="description" content="Quan sát nhiệt độ CPU Pentium 4 trong những tình trạng khác nhau" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân">
 <link rel="canonical" href="https://lehboi.github.io/kinh-nghiem/may-tinh/nhiet-do">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,15 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
   <div class="body">
-    <div class="title">Nhiệt độ CPU Pentium 4</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -236,6 +230,7 @@ https://lehboi.github.io/kinh-nghiem/may-tinh/nhiet-do
     </amp-facebook-like>
   </div>
 
+  <h1>Nhiệt độ CPU Pentium 4</h1>
 <p>Pentium 4 chạy Fedora Core 3 có thể thay đổi tốc độ với governor <b>userspace</b> và daemon <b>cpuspeed</b>. Configure kernel với CONFIG_X86_P4_CLOCKMOD=y để build driver, CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE=y và CONFIG_CPU_FREQ_GOV_USERSPACE=y để chọn governor. Khi ít việc, tốc độ CPU giảm dần xuống còn 1/8 tốc độ tối đa. Ngay khi có việc, tốc độ CPU tăng dần đến mức tối đa. Tốc độ CPU thay đổi sẽ ảnh hưởng đến <a href="../linh-tinh/tieu-thu-dien" target="_blank">công suất tiêu thụ</a> của CPU và làm thay đổi nhiệt độ CPU.</p>
 <p>Thí nghiệm:<br />
 Máy P4 2,6GHz. Dùng <a href="https://www.lm-sensors.org/" target='_blank'>lm_sensors</a> để đọc tốc độ quạt CPU, nhiệt độ máy và nhiệt độ CPU; nhiệt độ CPU có thể không chính xác lắm vì không biết công thức đúng của mainboard này để đổi từ giá trị đọc được từ chip.<br />
