--- a/kinh-nghiem/may-tinh/oss.html
+++ b/kinh-nghiem/may-tinh/oss.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Open Source Software (Trang web LHBội)</title>
+<title>Open Source Software</title>
 <meta name="description" content="Phần mềm mã nguồn mở làm được những gì?" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân, oss">
 <link rel="canonical" href="https://lehboi.github.io/kinh-nghiem/may-tinh/oss">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,15 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
   <div class="body">
-    <div class="title">Open Source Software</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -236,7 +230,8 @@ https://lehboi.github.io/kinh-nghiem/may-tinh/oss
     </amp-facebook-like>
   </div>
 
-<h3>Các ứng dụng máy tính trong văn phòng</h3>
+  <h1>Open Source Software</h1>
+<h2>Các ứng dụng máy tính trong văn phòng</h2>
 <p>Trong môi trường văn phòng kinh doanh, máy tính thường được dùng cho các công việc sau:</p>
 <ol><li>soạn thảo tài liệu bằng các chương trình xử lý văn bản</li>
 <li>soạn các tài liệu giới thiệu, các sơ đồ…</li>
@@ -287,13 +282,13 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-<h3>Giải pháp không tốn phí bản quyền</h3>
+<h2>Giải pháp không tốn phí bản quyền</h2>
 <p>Với hệ điều hành Linux và các phần mềm mã nguồn mở, hầu hết mọi nhu cầu kể trên đều được thoả mãn mà không tốn tiền mua bản quyền.</p>
 <p>Tài liệu tạo ra từ các phần mềm mã nguồn mở hoàn toàn tương thích với các phần mềm thông dụng trên MS Windows.</p>
 <p>Nhờ vào những đóng góp của cộng đồng sử dụng phần mềm mã nguồn mở người Việt, hiện nay chữ Việt được sử dụng rất tốt trên nền phần mềm mã nguồn mở.</p>
 <p>Chỉ trừ các phần mềm chuyên dùng của riêng từng tổ chức (mục số 4 ở trên) là không có sẵn. Không có sẵn nhưng vẫn có thể làm được trên nền phần mềm mã nguồn mở. Chi phí cho việc này không lớn hơn chi phí khi làm trên nền MS Windows.</p>
 <p>Giải pháp phần mềm mã nguồn mở rất thích hợp cho các doanh nghiệp nhỏ, trường học.</p>
-<h3>Những việc mà phần mềm mã nguồn mở chưa làm được</h3>
+<h2>Những việc mà phần mềm mã nguồn mở chưa làm được</h2>
 <p>Một số chương trình đặc biệt (ít người dùng) chưa được làm dưới dạng phần mềm mã nguồn mở, nhưng vẫn chạy được trên nền phần mềm mã nguồn mở. Tức là người dùng không tốn tiền hệ điều hành nhưng phải trả tiền bản quyền để dùng các chương trình đặc biệt đó. Ví dụ:</p>
 <ul><li>các phần mềm CAD như vẽ mạch in, vẽ kỹ thuật</li></ul>
 <p>Một số chương trình khác hoàn toàn phải lệ thuộc vào MS Windows.</p>
@@ -323,8 +318,8 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-<h3>Những việc mà phần mềm mã nguồn mở làm tốt</h3>
-<h4>Tổng đài điện thoại nội bộ</h4>
+<h2>Những việc mà phần mềm mã nguồn mở làm tốt</h2>
+<h3>Tổng đài điện thoại nội bộ</h3>
 <p>Một công nghệ đang trở nên quen thuộc với mọi người là VoIP. Hầu hết chúng ta đều đã từng dùng VoIP khi gọi điện thoại liên tỉnh hay quốc tế với các số 17x. Đó chỉ mới là một góc nhỏ xíu của VoIP. Những người cần phải gọi điện thoại quốc tế thật nhiều còn dùng đến dịch vụ PC-to-phone: gọi điện thoại từ máy tính đến một máy điện thoại với giá rẻ hơn các dịch vụ 17x nhiều lần.</p>
 <p>Đã dùng máy tính để nói chuyện với người ở nước ngoài được, vậy có thể dùng máy tính để nói chuyện với người trong nước hay trong cùng cơ quan được không?</p>
 <p>Được lắm chứ! Với phần mềm mã nguồn mở Asterisk, một máy tính có thể kiêm luôn việc của tổng đài nội bộ của các cơ quan, gọi là tổng đài IP. Mọi nhân viên dùng máy tính trong cơ quan có thể nói chuyện với nhau qua mạng nội bộ và tổng đài IP. Được như vậy thì cho cái máy điện thoại trên mặt bàn biến đi chỗ khác, và cũng không cần sợi dây nối giữa máy điện thoại và tổng đài nội bộ nữa vì hai thứ đó đều đã biến đi rồi. Với những văn phòng cũ đã có sẵn tổng đài nội bộ và hệ thống dây điện thoại thì việc này chẳng có ý nghĩa gì hết. Nhưng nếu trang bị tổng đài IP cho văn phòng mới thì số tiền tiết kiệm được không ít. Do chi phí cao mà hiện nay rất nhiều văn phòng chỉ có một máy điện thoại nội bộ dùng chung cho ba-bốn người trong khi mỗi người có một máy tính. Trường hợp này rất thích hợp để chuyển sang dùng tổng đài IP.</p>
@@ -359,9 +354,9 @@ data-ad-slot="3830899615">
 
 <p>Sóng Wi-fi đang dần dần lan ra khỏi mạng nội bộ của cơ quan; nhiều nơi trong thành phố đã được phủ sóng Wi-fi để hoà vào Internet, các ISP đang ráo riết phủ sóng Wi-fi khắp thành phố để thu hút khách hàng. Với sự tiện nghi đó, tổng đài IP nội bộ cũng vươn ra khỏi cơ quan. Bất cứ nơi nào có sóng Wi-fi là máy tính (hay điện thoại di động) có thể nối vào tổng đài IP nội bộ và người cầm máy có thể nói chuyện như đang ở văn phòng. Hãy tưởng tượng sếp đi công tác, khi cần nói chuyện với cấp dưới chỉ cần tìm một chỗ có Internet (thậm chí là dial-up) là có thể thoải mái nghe cấp dưới báo cáo mà không tốn tiền điện thoại di động. Một ví dụ nữa là nhân viên xuất nhập khẩu cần liên lạc với đối tác ở châu Âu hay Mỹ, hết giờ làm việc cứ về nhà mở máy tính nối vào tổng đài IP làm việc như ở văn phòng.</p>
 <p>Nếu đối tác cũng dùng tổng đài IP thì các máy nội bộ trong hai tổng đài có thể gọi lẫn nhau mà không phải tốn tiền điện thoại dù cho đối tác ở trong nước hay ngoài nước.</p>
-<h4>Chặn virus</h4>
+<h3>Chặn virus</h3>
 <p>Chương trình phát hiện virus có thể được dùng để làm nhiều việc: phát hiện virus gửi qua mail, phát hiện virus trong web server đi vào qua web proxy, phát hiện virus từ các máy Windows client gửi vào server.</p>
-<h4>Xem thêm</h4>
+<h3>Xem thêm</h3>
 <p><a href="https://linux-mag.com/id/7187" target="_blank">Một văn phòng luật sư ở Mỹ dùng toàn phần mềm mã nguồn mở</a></p>
 
   <hr>
