--- a/kinh-nghiem/may-tinh/phan-mem-tu-do.html
+++ b/kinh-nghiem/may-tinh/phan-mem-tu-do.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Phần mềm tự do (Trang web LHBội)</title>
+<title>Hỏi và Đáp về phần mềm mã nguồn mở và phần mềm tự do</title>
 <meta name="description" content="Hỏi và Đáp về phần mềm mã nguồn mở và phần mềm tự do" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân">
 <link rel="canonical" href="https://lehboi.github.io/kinh-nghiem/may-tinh/phan-mem-tu-do">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -210,14 +210,9 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
 
 
   <div class="body">
-    <div class="title">Hỏi và Đáp về phần mềm mã nguồn mở và phần mềm tự do</div>
 
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
@@ -236,7 +231,8 @@ https://lehboi.github.io/kinh-nghiem/may-tinh/phan-mem-tu-do
     </amp-facebook-like>
   </div>
 
-<h3>Giải thích các từ <i>lạ</i></h3>
+  <h1>Hỏi và Đáp về phần mềm mã nguồn mở và phần mềm tự do</h1>
+<h2>Giải thích các từ <i>lạ</i></h2>
 <u>Sở hữu trí tuệ (intellectual property)</u>: là thuật ngữ nói về quyền của người sở hữu các kết quả của sự sáng tạo, nghệ thuật, bằng sáng chế, thương hiệu, bí mật thương mại.
 <p>
 <u>Bằng sáng chế (patent)</u>: cấp cho người sáng chế quyền được độc quyền khai thác một kiến thức trong một thời hạn (thường là 20 năm). Người sáng chế phải nộp hồ sơ mô tả điều mình làm ra, nếu điều đó là chưa hề có thì được cấp bằng sáng chế. Ví dụ cấu trúc FAT để lưu trữ file là sáng chế của Microsoft, cách nén ảnh GIF và nén nhạc MP3 là hai sáng chế được cấp bằng. Số bằng sáng chế được cấp trên khắp thế giới rất lớn nhưng những bằng sáng chế chưa tìm được nơi áp dụng thì không đem lại lợi gì cho người sáng chế.</p>
@@ -304,14 +300,14 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-<h3>Phong trào Phần mềm Tự do là gì?</h3>
+<h2>Phong trào Phần mềm Tự do là gì?</h2>
 Khoảng năm 1976 trở về trước, phần mềm thường được bán cả mã nguồn lẫn mã nhị phân, và lập trình viên thường truyền cho nhau những mã nguồn để giúp nhau trong công việc. Nhưng công nghiệp phần mềm phát triển lên, các công ty phần mềm bảo vệ lợi nhuận bằng cách gia tăng việc bảo vệ mã nguồn, lập trình viên phải ký với công ty bản cam kết không tiết lộ bí mật (gồm có mã nguồn). Năm 1985, Richard Stallman khởi xướng Phong trào Phần mềm Tự do để vận động cho tự do sử dụng phần mềm, gồm cả việc sửa đổi, phân phối lại phần mềm.
-<h3>Copyleft có gì hay?</h3>
+<h2>Copyleft có gì hay?</h2>
 Copyleft bảo đảm rằng <i>tất cả</i> mọi người có quyền dùng-phân phối-sửa đổi các phần mềm tự do. Không một người nào có quyền sở hữu phần mềm tự do.
 <p>
 Copyleft giúp người ta có cơ hội đóng góp cho sự phát triển của phần mềm tự do. Những lập trình viên làm việc cho các công ty hay tổ chức có thể dùng phần mềm tự do vào công việc của họ, có thể sửa đổi để làm ra sản phẩm mới. Khi đó người chủ không thể biến sản phẩm đó thành tài sản riêng của công ty được, họ chỉ có thể <b>bán</b> sản phẩm theo kiểu phần mềm tự do hoặc họ vứt bỏ sản phẩm đó.
 </p>
-<h3>Tại sao lại có quyền BÁN phần mềm tự do?</h3>
+<h2>Tại sao lại có quyền BÁN phần mềm tự do?</h2>
 Nhiều người vẫn <strong>hiểu lầm</strong> rằng tinh thần của phần mềm tự do là không ai được thu tiền trên các bản phần mềm, hoặc chỉ được thu một ít tiền để bù vào chi phí phân phối. Nhưng chữ <i>tự do</i> của phần mềm tự do không mang nghĩa <i>miễn phí</i>. Nó mang nghĩa là không bị sở hữu bởi bất kỳ người nào. Thử so với phần mềm bị sở hữu, phần mềm bị sở hữu thường được bán với giá cao nhưng cũng có khi đem cho không, nhưng người dùng không được toàn quyền (tự do) đối với phần mềm cho không đó.
 <p>
 Vậy mọi người đều có quyền bán phần mềm tự do, ngay cả những phần mềm <strong>không tự làm ra</strong> và được khuyến khích thu nhiều tiền khi phân phối phần mềm tự do, nhiều đến mức có thể thu được. Nghe lạ quá phải không! Mọi người được khuyến khích kiếm lời từ phần mềm tự do và trích một phần lợi nhuận đó đóng góp cho Phong trào Phần mềm Tự do.
@@ -342,12 +338,12 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-<h3>Vậy nếu bán phần mềm tự do với giá cao thì làm sao phần mềm tự do được phổ biến đến nhiều người?</h3>
+<h2>Vậy nếu bán phần mềm tự do với giá cao thì làm sao phần mềm tự do được phổ biến đến nhiều người?</h2>
 Một phần mềm bị sở hữu được bán với giá cao thì sẽ có ít người được dùng. Nhưng phần mềm tự do được bán với giá cao vẫn có thể có nhiều người dùng. Đó là vì có nhiều cách hợp pháp để có được phần mềm tự do. Người ta có thể chép lại từ bạn mình, hoặc nhiều người hùn nhau lại mua một bản về để tất cả đều được dùng.
 <p>
 Vì có nhiều cách để được dùng phần mềm tự do nên giá cao không cản trở sự phổ biến của phần mềm tự do. Sự phổ biến của phần mềm tự do được quyết định bởi sự <i>hữu dụng</i> của nó. Khi nào mà phần mềm tự do còn chưa đủ hữu dụng thì người ta còn phải dùng đến phần mềm bị sở hữu. Vậy cách tốt nhất để phổ biến phần mềm tự do là nâng cao tính năng của nó chứ không phải là hạ thấp giá bán. Mọi người đều có thể góp sức vào việc đó bằng cách lập trình, viết tài liệu hướng dẫn, hoặc quyên góp cho người khác làm.
 </p>
-<h3>Phần mềm mã nguồn mở có phải là phần mềm tự do?</h3>
+<h2>Phần mềm mã nguồn mở có phải là phần mềm tự do?</h2>
 Có một số quy định (ràng buộc) về quyền sử dụng phần mềm mã nguồn mở không được Phong trào Phần mềm Tự do chấp nhận. Tuy nhiên trong thực tế thì hai loại này rất gần nhau và hầu hết các phần mềm mã nguồn mở là phần mềm tự do. Và GNU General Public License của Phong trào Phần mềm Tự do chính là một trong những giấy phép theo định nghĩa của phần mềm mã nguồn mở.
 <!-- AMP In-article 1 -->
 <amp-ad
@@ -375,7 +371,7 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-<h3>Có bao nhiêu giấy phép sử dụng phần mềm mã nguồn mở?</h3>
+<h2>Có bao nhiêu giấy phép sử dụng phần mềm mã nguồn mở?</h2>
 Có hơn 50 giấy phép sử dụng phần mềm mã nguồn mở đã được đặt ra bởi các tổ chức khác nhau. Sau đây là một vài giấy phép của các tổ chức nổi tiếng nhất:
 <ul><li>GNU General Public License (GPL), khoảng 2/3 trong tất cả các phần mềm mã nguồn mở và phần mềm tự do được bảo vệ bằng GPL,</li>
 <li>GNU Library or Lesser General Public License (LGPL)</li>
@@ -549,7 +545,7 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-<h3>Những điều cần chú ý khi dùng phần mềm tự do</h3>
+<h2>Những điều cần chú ý khi dùng phần mềm tự do</h2>
 Người dùng không rành phần mềm sẽ cần giúp đỡ khi dùng. Nếu người dùng lấy được phần mềm tự do một cách miễn phí thì sẽ không có ai có trách nhiệm giúp đỡ, chỉ có thể tìm sự giúp đỡ tự nguyện ở các cộng đồng người dùng phần mềm tự do. Nếu cần một sự giúp đỡ chuyên nghiệp, thì người dùng nên mua phần mềm tự do từ các nhà phân phối để nhận được sự bảo đảm giúp đỡ khi cần.
 <p>
 Khi người dùng (là pháp nhân) cần thuê một nơi nào đó sửa đổi phần mềm cho phù hợp với nhu cầu hơn, thì phải ghi rõ trong hợp đồng là bên sửa đổi phải chịu hoàn toàn trách nhiệm về tính hợp pháp của phần mềm sau khi sửa và phải bồi thường những thiệt hại xảy ra cho người dùng nếu có sự vi phạm bản quyền.</p>
