--- a/kinh-nghiem/may-tinh/raspberrypi.html
+++ b/kinh-nghiem/may-tinh/raspberrypi.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>RaspberryPi (Trang web LHBội)</title>
+<title>RaspberryPi</title>
 <meta name="description" content="Máy tính tí hon RaspberryPi làm trung tâm giải trí gia đình" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân, raspberrypi">
 <link rel="alternate" href="https://www.lhboi.name.vn/kinh-nghiem/may-tinh/raspberrypi">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,16 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
   <div class="body">
-    <div class="title">RaspberryPi</div>
-<div class="right">Viết lần đầu trong Tháng Ba, 2013.</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -237,6 +230,8 @@ https://lehboi.github.io/kinh-nghiem/may-tinh/raspberrypi
     </amp-facebook-like>
   </div>
 
+  <h1>RaspberryPi</h1>
+<div class="right">Viết lần đầu trong Tháng Ba, 2013.</div>
 <p>Hệ thống giải trí nhạc và phim gia đình tôi vừa mới có thêm một thành phần. Đó là máy phát nhạc và phim được làm theo kiểu của <i>người thích tự làm</i> và <a href="/huu-ich/tich-luy">tiết kiệm</a>. Máy phát này được làm từ một cái máy tính nhỏ xíu là <a href="https://www.raspberrypi.org/faqs" target="_blank">Raspberry Pi</a> và phần mềm <a href="https://www.raspbmc.com/wiki/user/" target="_blank">RaspBMC</a> (dựa trên hệ điều hành Linux).
 <br>Trước khi dùng Raspberry Pi làm máy phát phim, tôi vẫn dùng máy tính để bàn với CPU AMD Phenom II X3 710 với chip màn hình ATI Radeon HD 3200 để xem phim HD. Tôi chú ý đến Raspberry Pi vì nó:
 <ol><li>nhỏ, ít hao điện,</li>
