--- a/kinh-nghiem/may-tinh/spam-call.html
+++ b/kinh-nghiem/may-tinh/spam-call.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Chặn những cuộc gọi tiếp thị (Trang web LHBội)</title>
+<title>Chặn những cuộc gọi tiếp thị</title>
 <meta name="description" content="Chặn những cuộc gọi tiếp thị bằng sự hợp tác trong đám mây" />
 <meta name="keywords" content="spam, truecaller, showcaller,  sms, email">
 <link rel="alternate" href="https://www.lhboi.name.vn/kinh-nghiem/may-tinh/spam-call">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -140,6 +140,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 <script async custom-element="amp-accordion" src="https://cdn.ampproject.org/v0/amp-accordion-0.1.js"></script>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -211,15 +212,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
 <div class="body">
-  <div class="title">Chặn những cuộc gọi tiếp thị</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -237,9 +231,10 @@ https://lehboi.github.io/kinh-nghiem/may-tinh/spam-call
     </amp-facebook-like>
   </div>
 
+  <h1>Chặn những cuộc gọi tiếp thị</h1>
   <p>Xã hội hiện đại đem đến cho người ta nhiều tiện nghi và cả những phiền toái. Khi những tiện nghi bị người này lạm dụng thì nó trở thành sự phiền toái của người khác ngay. Email dùng để thông tin với nhau, lạm dụng email thì gây ra sự phiền toái của <a href="spam">spam mail</a>. Khi điện thoại trở nên phổ biến thì người ta lạm dụng nó để ép thông tin tiếp thị đến bất kỳ người nào có điện thoại, không phải một lần mà lặp lại nhiều lần.</p>
   <p>Ở Việt Nam hiện nay, người dùng điện thoại thường bị làm phiền bởi các dịch vụ ngân hàng (mời làm thẻ tín dụng, mời vay tiền, mời gửi tiết kiệm), bất động sản, đầu tư cổ phiếu nước ngoài, bảo hiểm nhân thọ… Các dịch vụ khác cũng làm phiền ở mức độ thấp hơn là khách sạn, nhà hàng, rượu, thiết kế web. Ngoài ra còn phải kể đến những kẻ lừa đảo như bán mật ong rừng, thông báo trúng thưởng…</p>
-  <h1>Tại sao chúng ta bị gọi làm phiền?</h1>
+  <h2>Tại sao chúng ta bị gọi làm phiền?</h2>
   <p>Vì số điện thoại của chúng ta đã bị bán cho những kẻ bán danh sách điện thoại. Có hàng trăm kẻ như vậy. Và mỗi kẻ đó bán lại cho cả ngàn người khác. Các bạn thử dùng Google tìm "Miễn phí" "Danh sách khách hàng" sẽ thấy vô số nơi bán danh sách, những nơi đó còn cho không một vài bộ danh sách để hút khách.
   <br>Những kẻ bán danh sách điện thoại sưu tầm số điện thoại của đủ các loại khách hàng: khách hàng đã mua nhà dự án, khách hàng đã gửi tiền tiết kiệm, khách hàng đã đi du lịch, phụ huynh học sinh… Do đó, không sớm thì muộn số điện thoại của bạn sẽ bị đưa vào các danh sách đó. Thật buồn cười là số điện thoại của tôi xuất hiện hai lần với hai tên khác nhau trong danh sách khách hàng đã mua nhà.
   <br>Khi số điện thoại của chúng ta đã bị như vậy rồi thì không thể nào ngăn người lạ gọi đến, hết người này gọi đến người khác gọi.
@@ -274,14 +269,14 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-  <h1>Đưa spammer vào đám mây</h1>
+  <h2>Đưa spammer vào đám mây</h2>
   <div class="flright"><amp-img alt="Màn hình app Showcaller" src="/images/BlockedCall.jpg" width="360" height="240" layout="responsive"></amp-img></div>
   <p>Truecaller và <a href="https://www.show-caller.com/" target='_blank'>Showcaller</a> là những app để chống những cuộc gọi tiếp thị không mong muốn bằng sự hợp tác trong cộng đồng. App này cho phép gắn thêm thông tin vào mỗi số điện thoại: tên và dấu spam.
   <br>Điều đặc biệt là tất cả thông tin được tập trung lại trong server trong Internet mà không hề làm rối sổ điện thoại cá nhân của người dùng. Khi tôi gắn tên 'An BĐS' cho một số điện thoại rồi thì khi An gọi đến một người khác có dùng app thì tên 'An BĐS' sẽ tự hiện ra (nếu máy điện thoại người bị gọi đang nối mạng, tốt nhất là Wi-Fi vì mobile Internet có thể bị gián đoạn khi nhận cuộc gọi) và người bị gọi sẽ không trả lời khi thấy chữ BĐS. Nếu một số điện thoại bị đánh dấu là spam bởi 10 người dùng sẽ tự động bị chặn ở tất cả mọi người dùng. Từng người dùng có thể bỏ chặn những spammer cụ thể, ví dụ tôi không chặn số điện thoại của ngân hàng mà tôi có tài khoản mặc dù số đó bị xếp vào spammer.</p>
   <p>Sau hơn hai năm dùng Truecaller, tôi chuyển sang dùng Showcaller vì nó gọn nhẹ hơn.</p>
   <p>Hãy cài Showcaller vào và bỏ vài giây ghi tên và đánh dấu spam cho những cuộc gọi không mong muốn. Hơn hai năm qua, tôi đã đặt tên cho hàng ngàn số đó với các chữ rất dễ nhận như là 'BĐS', 'Dai Ichi', 'Tín dụng', 'Chứng Khoán Mỹ', 'Hotel'. Nên ghi ngành kinh doanh trong tên để mọi người dễ nhận biết mục đích người gọi, đừng ghi những chữ chung chung như 'Quấy rối', 'Phiền phức', 'Mất lịch sự'. Showcaller có chỗ để người dùng ghi chú vào từng số điện thoại, chúng ta có thể ghi nhiều thông tin hơn vài chữ ngắn ngủi trong tên.</p>
   <p>Ngay khi mới cài Showcaller, bạn đã được chặn các cuộc gọi từ hàng ngàn spammer có sẵn trong server Showcaller. Danh sách các spammer ở Việt Nam có các số gọi giới thiệu bất động sản, ngân hàng, bảo hiểm, phòng tập thể dục, cho vay, thẻ thành viên khách sạn…</p>
-  <h1>Và hơn nữa</h1>
+  <h2>Và hơn nữa</h2>
   <p>Để cho những số điện thoại spam mau trở thành spammer, chúng ta hãy cùng nhau chia sẻ những số spam mà mình đã báo cáo. Một người nhận được cuộc gọi spam xong, đánh dấu số đó là spam và gửi vào mạng xã hội <a href="https://www.facebook.com/boi.hong.le/posts/1118587198233629" target='_blank'>Facebook</a> cùng với mô tả về người gọi (tiếp thị ngành gì, tên gì…), nhiều người khác cùng đánh dấu nó là spam ngay cả khi chưa bị gọi.
   <br>Nếu chịu khó hơn nữa, mỗi khi nhận được SMS hoặc email tiếp thị, ngoài việc đánh dấu đó là thư rác, các bạn mở ra xem và lấy các số điện thoại trong đó ra để báo cáo là số spam. Chính các số điện thoại trong email, SMS mới là số điện thoại spammer dùng nhiều nhất, còn số gửi SMS chỉ là số gửi thuê. Nhiều người cùng làm như vậy thì sẽ đến lúc những người phát tán thông tin tiếp thị không mong muốn sẽ nhận được kết quả là số điện thoại của họ gọi đi đâu cũng chỉ nghe tín hiệu bận. Những số điện thoại thường dùng là số đã được lựa chọn, số đẹp. Nếu người chủ của số đẹp đó biết rằng hành động spam sẽ bị trả giá bằng việc số đẹp của họ bị chặn ở nhiều nơi thì họ sẽ ngừng spam.
   <br>Các spammer thường dùng một số điện thoại khác để gọi, ngoài số chính của họ. Các số điện thoại đó cũng sẽ nhanh chóng bị chặn nếu cộng đồng chống spam tích cực. Tóm lại là, nếu chúng ta cùng tích cực ngăn chặn thì sự lạm dụng sẽ bị vô hiệu hoá.</p>
@@ -314,7 +309,7 @@ data-ad-slot="3830899615">
 
 <amp-accordion>
 <section>
-  <h1>Giới hạn của Truecaller</h1>
+  <h2>Giới hạn của Truecaller</h2>
   <div>
   <p>Sau khi dùng Truecaller hơn hai năm trên máy Android 4 và Android 7, tôi đang gặp một rắc rối. Vấn đề là bản Truecaller 10 chạy trên Android 7 giữ lại trong máy một danh sách những số điện thoại mà app này đã từng tìm từ đám mây, danh sách đó gọi là Identified Contacts list. Về lý thuyết, việc giữ Identified Contacts list trong máy sẽ giúp app tìm được thông tin về số điện thoại nhanh hơn so với việc tìm từ đám mây. Nhưng thời gian để CPU của smartphone tìm càng lâu khi danh sách đó càng dài ra, trong khi thời gian để tìm trong đám mây gần như không đổi do server đủ mạnh để tìm trong hàng tỷ số điện thoại. Cụ thể thì máy Android 7 của tôi chứa hơn 2.000 số điện thoại trong Identified Contacts list, trong đó có hơn 800 số thuộc Block list, máy của tôi (thuộc hạng <i>cận trung cấp</i> tức là entry level) mất gần 10 giây để tìm một số điện thoại trong danh sách đó, và mỗi lần tôi sửa tên hay ngành kinh doanh của một số thì mất hơn 15 giây. Khó hiểu hơn nữa là Truecaller xoá tin nhắn cũng chậm hơn bình thường.
   <br>Tôi sẽ đề nghị Truecaller cho user giới hạn độ dài Identified Contacts list sao cho thời gian xử lý vừa đủ nhanh, mức giới hạn đó tuỳ vào sức mạnh của từng smartphone, khi danh sách dài đến mức giới hạn thì Truecaller sẽ tự động xoá bớt những số điện thoại cũ nhất trong danh sách. Trong khi chờ Truecaller làm như vậy, mỗi người cần phải tự xoá bớt những số điện thoại quá cũ trong Block list và Identified Contacts list.</p>
