--- a/kinh-nghiem/may-tinh/tai-khoan-google.html
+++ b/kinh-nghiem/may-tinh/tai-khoan-google.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Tài khoản Google (Trang web LHBội)</title>
+<title>Tạo tài khoản Google</title>
 <meta name="description" content="Cách tạo tài khoản Google với các địa chỉ mail không phải gmail" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân">
 <link rel="canonical" href="https://lehboi.github.io/kinh-nghiem/may-tinh/tai-khoan-google">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,15 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
   <div class="body">
-    <div class="title">Tài khoản Google</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -236,6 +230,7 @@ https://lehboi.github.io/kinh-nghiem/may-tinh/tai-khoan-google
     </amp-facebook-like>
   </div>
 
+  <h1>Tạo tài khoản Google</h1>
 <p>Google là một phần quan trọng trong Internet hiện nay. Google cung cấp rất nhiều dịch vụ miễn phí trên Internet, như là: tìm, thư, chat, soạn-giữ-chia sẻ tài liệu-hình-âm thanh-video, sổ địa chỉ, lịch làm việc… Đặc biệt là với thiết bị di động Android thì hầu như bạn có mọi thông tin bên mình ở mọi nơi.</p>
 <p>Một dịch vụ miễn phí rất tốt của Google là Google Drive. Google Drive cho phép tạo ra, upload, sửa, chia sẻ tới 15GB các loại file văn bản, bảng tính, trình bày, pdf, hình, âm thanh… Thay vì gửi file cho đối tác xem, bạn có thể để file trong Google Drive và gửi link cho đối tác. Bạn cũng có thể cho phép đối tác sửa vào file, có thể xem lại các bản cũ hơn của file… Công cụ <a href="/huu-ich/ke-hoach-tai-chinh/" target="_blank">Kế hoạch tài chính</a> được soạn để dùng với Google Drive.
 <br>Để dùng Google Drive và nhiều dịch vụ khác của Google, bạn cần một tài khoản Google. Thông thường tài khoản Google được tạo ra khi bạn dùng GMail lần đầu. Nếu bạn đang dùng và hài lòng với một dịch vụ thư khác, ví dụ như Yahoo, bạn không muốn có thêm một hộp thư trong GMail, bạn vẫn có thể có một tài khoản Google gắn với hộp thư điện tử đang dùng. Sau đây là cách tạo tài khoản Google gắn với hộp thư Yahoo.</p>
@@ -265,7 +260,7 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-<h3>Bước 1: Đăng ký</h3>
+<h2>Bước 1: Đăng ký</h2>
 <p>Mở trang web www.google.com trong web browser (Chrome, Firefox, Internet Explorer, Safari), bạn sẽ thấy tương tự như hình 1</p>
 <div><amp-img alt="Hình 1" src="/images/Google0127b5.png" width="719" height="440" layout="responsive"></amp-img></div>
 <p>Bấm vào chữ <b>Sign in</b> ở góc trên bên phải, bạn sẽ thấy tương tự như hình 2</p>
@@ -306,7 +301,7 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-<h3>Bước 2: Xác nhận</h3>
+<h2>Bước 2: Xác nhận</h2>
 <p>Google cần xác nhận là bạn đang dùng địa chỉ email đã ghi trong bước 1
 <br>Nếu bạn không dùng địa chỉ email ở Yahoo, bạn bấm vào chữ Request a verification email. Sau đó mở chương trình mail ra, đọc và làm theo hướng dẫn trong thư gửi từ Google.
 <br>Nếu đó là địa chỉ email ở Yahoo, bạn bấm vào chữ <b>Verify now</b>, bạn sẽ thấy trang web login Yahoo như hình 6.</p>
