--- a/kinh-nghiem/may-tinh/vi-dien-tu.html
+++ b/kinh-nghiem/may-tinh/vi-dien-tu.html
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -140,6 +140,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -211,14 +212,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
 
   <div class="body">
-    <div class="title">Ví-điện-tử</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -237,7 +232,8 @@ data-ad-slot="5275186684">
   </div>
 
 <!-- body here -->
-<h1>Các cách-thanh-toán không dùng tiền-mặt</h1>
+  <h1>Ví-điện-tử</h1>
+<h2>Các cách-thanh-toán không dùng tiền-mặt</h2>
 <p>Xã-hội càng phát-triển người ta càng có nhiều cách-thanh-toán không dùng tiền-mặt.</p>
 <ol>
 <li>Từ thời cổ-xưa, khi bắt-đầu có hình-thức ngân-hàng đầu-tiên ở xứ Ba-Tư, các ngân-hàng đã phát-hành những bức-thư có-thể đổi được ra tiền gọi là čak. Ngày-nay những thư đó gọi là <strong><a href="https://vi.wikipedia.org/wiki/S%C3%A9c_(ch%E1%BB%A9ng_t%E1%BB%AB)" target='_blank'>séc</a></strong> (cheque, check).</li>
@@ -274,7 +270,7 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-<h1>Tình-hình ví-điện-tử ở Việt-Nam</h1>
+<h2>Tình-hình ví-điện-tử ở Việt-Nam</h2>
 <div class="flright"><amp-img alt="Ví-điện-tử" src="/images/mmoney-digital-wallet.jpg" width="740" height="493" layout="responsive"></amp-img></div>
 <p>Ở Việt-Nam hiện-nay có khoảng 20 hệ-thống-ví-điện-tử. Mỗi ví-điện-tử gắn liền với một số-điện-thoại-di-động. Một số-điện-thoại-di-động có-thể dùng với nhiều hệ-thống-ví.<br>
 Những công-dụng mà hầu-như ví nào cũng có là:</p>
@@ -320,7 +316,7 @@ data-ad-slot="3830899615">
 </amp-ad>
 
 <p>Tôi đã thử bốn ví-điện-tử MoMo, ZaloPay, ViettelPay, GrabPay-by-Moca. Sau đây là những đặc-tính riêng của mỗi ví:</p>
-<a href="https://zalopay.vn/" target='_blank'><h2>ZaloPay</h2></a>
+<a href="https://zalopay.vn/" target='_blank'><h3>ZaloPay</h3></a>
 <div class="flright"><amp-img alt="ZaloPay QR-code" src="/images/QRBoiZaloPay.png" width="519" height="517" layout="responsive"></amp-img></div>
 <ul>
 <li>liên-kết với thẻ-quốc-tế và thẻ-nội-địa của 8 ngân-hàng ở Việt-Nam,</li>
@@ -330,7 +326,7 @@ data-ad-slot="3830899615">
 <li>không thu phí-giao-dịch thẻ-quốc-tế.</li>
 </ul>
 <br style="clear:both">
-<a href="https://momo.vn/" target='_blank'><h2>MoMo</h2></a>
+<a href="https://momo.vn/" target='_blank'><h3>MoMo</h3></a>
 <div class="flleft"><a href="https://momo.vn:4445/referral/MDkxOTkxMjM0MSZsaXhpMjAxOQ==" target='_blank'><amp-img alt="MoMo QR-code" src="/images/QRBoiMomo.jpg" width="500" height="545" layout="responsive"></amp-img></a></div>
 <ul>
 <li>liên-kết với thẻ-quốc-tế và thẻ-nội-địa của 15 ngân-hàng ở Việt-Nam, nhưng mỗi lúc chỉ liên-kết được một ngân-hàng, để đổi sang dùng ngân-hàng khác phải ngừng liên-kết với ngân-hàng đang dùng,</li>
@@ -341,7 +337,7 @@ data-ad-slot="3830899615">
 <li>có nhiều chương-trình khuyến-mại, thưởng khi giới-thiệu người mới.</li>
 </ul>
 <br style="clear:both">
-<a href="https://www.grab.com/vn/grabpay/" target='_blank'><h2>GrabPay by Moca</h2></a>
+<a href="https://www.grab.com/vn/grabpay/" target='_blank'><h3>GrabPay by Moca</h3></a>
 <div class="flright"><amp-img alt="GrabPay QR-code" src="/images/QRBoiGrabPay.png" width="490" height="488" layout="responsive"></amp-img></div>
 <ul>
 <li>ví-điện-tử của <a href="https://www.moca.vn" target='_blank'>Moca</a> được tích hợp vào app của Grab,</li>
@@ -353,7 +349,7 @@ data-ad-slot="3830899615">
 <li>trả-tiền dịch-vụ Grab được thưởng gấp 3 số điểm so với dùng tiền-mặt.</li>
 </ul>
 <br style="clear:both">
-<a href="https://viettelpay.vn/" target='_blank'><h2>ViettelPay</h2></a>
+<a href="https://viettelpay.vn/" target='_blank'><h3>ViettelPay</h3></a>
 <div class="flleft"><amp-img alt="ViettelPay QR-code" src="/images/QRBoiViettelPay.jpg" width="540" height="540" layout="responsive"></amp-img></div>
 <ul>
 <li>liên kết với thẻ-quốc-tế và thẻ-nội-địa của 32 ngân-hàng ở Việt-Nam (tuy nhiên không dùng được thẻ-quốc-tế sau khi liên kết),</li>
@@ -391,29 +387,29 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-<h1>Dùng ví-điện-tử như thế nào?</h1>
-<h2>Tạo ví</h2>
+<h2>Dùng ví-điện-tử như thế nào?</h2>
+<h3>Tạo ví</h3>
 <p>Bạn cần có smartphone có cài app ví-điện-tử và nối Internet, và một số-điện-thoại-di-động để đăng-ký ví (không nhất-thiết phải gắn SIM-điện-thoại trong cùng máy cài app ví-điện-tử). Sau khi đăng-ký bằng số-điện-thoại-di-động, ví của bạn được dùng ở mức-độ cơ-bản với số tiền hạn-chế (khoảng 5 triệu đồng mỗi ngày). Để nâng số tiền hạn-chế lên mức thông-thường (khoảng vài trăm triệu đồng mỗi ngày) bạn phải được duyệt bằng cách dùng app ví-điện-tử chụp hình thẻ chứng minh nhân dân và mặt bạn.
 <br>P.S. Theo quy-định mới của Ngân-hàng-Nhà-nước thì ví-điện-tử chỉ được duyệt khi liên-kết với một tài-khoản-ngân-hàng.</p>
 <p>Như đã ghi ở trên, hiện-nay ở Việt-Nam có khoảng 20 hiệu ví-điện-tử, theo tôi nhận-xét thì phổ-biến nhất là ví-điện-tử MoMo. Nếu bạn đăng-ký ví MoMo mới thì nhập mã-giới-thiệu của tôi là 0919912341 hoặc bấm vào <a href="https://momo.vn:4445/referral/MDkxOTkxMjM0MSZsaXhpMjAxOQ==" target='_blank'>link này</a> để cả hai cùng được tặng tiền (tuỳ theo chương-trình khuyến-mại của MoMo).</p>
 
-<h2>Cho tiền vào ví</h2>
+<h3>Cho tiền vào ví</h3>
 <p>Nếu hệ-thống-ví của bạn có các cửa-hàng-nạp-tiền thì app ví-điện-tử sẽ chỉ cho bạn vị-trí cửa-hàng gần nhất, bạn đến đó yêu-cầu nạp-tiền vào ví-điện-tử có số-điện-thoại của bạn và đưa tiền-mặt cho nhân-viên cửa-hàng.
 <br>Nếu bạn có tài-khoản-ngân-hàng thì cũng nên liên-kết thẻ ATM của tài-khoản đó với ví. Nếu bạn có thẻ-quốc-tế thì cũng nên liên-kết thẻ với ví. Bạn có-thể nạp-tiền vào ví từ tài-khoản-ngân-hàng đã liên-kết với ví.
 <br>Khi tiêu tiền, bạn sẽ được hỏi lấy tiền từ ví hay từ các thẻ liên-kết. Lấy tiền từ ví là nhanh nhất.
 Khi tiêu tiền từ thẻ, app sẽ mở web của ngân-hàng, chờ bạn gõ OTP gửi từ ngân-hàng để xác-định có đúng chủ-thẻ tiêu tiền không, việc này làm cho việc dùng ví-điện-tử tốn thời-gian.</p>
 
-<h2>Trả-tiền điện, nước và các dịch-vụ tích hợp trong ví</h2>
+<h3>Trả-tiền điện, nước và các dịch-vụ tích hợp trong ví</h3>
 <p>Mỗi hệ-thống-ví đều có tích hợp một số dịch-vụ thanh-toán giùm như trả-tiền điện nước, vé xe, học phí… Bạn hãy bấm vào icon của dịch vụ rồi nhập thông tin liên quan như số hợp đồng, app sẽ tra thông tin và báo số tiền cần trả, bạn chọn nguồn tiền là ví hoặc thẻ liên kết.
 <br>Với tiền điện và nước, ví sẽ nhớ luôn số hợp đồng của bạn và hàng tháng nhắc bạn số tiền đến hạn phải trả. Thật tiện lợi!</p> 
 
-<h2>Nạp-tiền điện-thoại</h2>
+<h3>Nạp-tiền điện-thoại</h3>
 <p>Nạp-tiền điện thoại cũng là một dịch vụ tích hợp. Mỗi khi có đợt khuyến mãi của các công-ty-điện-thoại-di-động thì ví sẽ nhắc bạn nạp-tiền. Bạn cũng có-thể nạp-tiền trong những ngày không có khuyến mãi.</p>
 
-<h2>Mua hàng online</h2>
+<h3>Mua hàng online</h3>
 <p>Một số trang web bán hàng nhận thanh-toán bằng ví-điện-tử. Khi bạn chọn thanh-toán bằng ví-điện-tử thì trang web sẽ hiện lên QR-code của món tiền cần phải trả, bạn dùng app ví-điện-tử scan QR-code đó để trả-tiền. Xong!</p>
 
-<h2>Mua hàng ở siêu-thị, cửa-hàng, quán-ăn</h2>
+<h3>Mua hàng ở siêu-thị, cửa-hàng, quán-ăn</h3>
 <p>Một vài siêu-thị, cửa-hàng, quán-ăn, cây-xăng nhận thanh-toán bằng ví-điện-tử. Có hai cách thanh-toán.</p>
 <ol>
 <li>Người-bán scan QR-code của bạn, hoặc</li> 
@@ -449,13 +445,13 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-<h2>Chuyển tiền cho người khác</h2>
+<h3>Chuyển tiền cho người khác</h3>
 <p>Bạn có-thể chuyển tiền từ ví đến tài-khoản-ngân-hàng của bạn hoặc của người khác. Nếu người-nhận cũng dùng chung hệ-thống-ví thì bạn chỉ cần chuyển tiền đến số điện thoại đăng-ký ví, dễ nhớ hơn số-tài-khoản nhiều.
 <br><span class="tmark">Chú-ý: rất dễ chuyển tiền đến sai chỗ, và rất khó đòi lại số tiền đã chuyển không đúng chỗ.</span>
 <br>Ví-dụ người-nhận đã đổi số-điện-thoại mà người-gửi không biết, người-gửi gửi tiền theo số-điện-thoại cũ. Khi đó, nếu số-điện-thoại nhận tiền không có ai dùng hoặc người-dùng không biết dùng ví-điện-tử thì không có ai giúp bạn lấy lại số tiền đã gửi sai chỗ. Công-ty quản-lý hệ-thống-ví không can-thiệp vào việc này, ngay cả khi họ biết rằng không còn ai dùng ví với số-điện-thoại đó.</p>
 <p>Việc chuyển-tiền giữa hai người đang gặp mặt nhau thì càng đơn-giản hơn nữa: người-nhận mở hình QR-code của ví mình và người-trả dùng ví quét QR-code đó qua camera và gõ số tiền cần trả vào, thế là xong, không cần biết đến số điện thoại luôn. Các hình QR-code của các ví của tôi có ở bên trên, các bạn có-thể thử scan và chuyển cho tôi một ngàn VND 😏.
 <br>Tiến tới một xã-hội không dùng tiền-mặt, các bạn hãy mừng đám-cưới/sinh-nhật/thôi-nôi/lì-xì bằng ví-điện-tử.</p>
-<h2>Độ an-toàn của ví-điện-tử so với ví thường</h2>
+<h3>Độ an-toàn của ví-điện-tử so với ví thường</h3>
 <p>Giống như ví thường, ta chỉ nên để trong ví-điện-tử một số tiền vừa đủ cho những khoản tiêu-vặt trong vài ngày, khi tiêu hết hoặc khi quyết định mua một món gì cần nhiều tiền hơn thì ta lại cho thêm tiền vào.
 <br>Khi bạn bị mất ví thường thì <a href="https://vi.wikipedia.org/wiki/X%C3%A1c_su%E1%BA%A5t" target='_blank'>xác-suất</a> của việc bạn mất hết tiền trong ví và phải mua cái ví mới là gần 100%. Chỉ có rất ít trường hợp ví của bạn được người tốt bụng tìm thấy và trong ví có một mẩu giấy ghi tên và số điện thoại của bạn (<a href="https://vi.wikipedia.org/wiki/Danh_thi%E1%BA%BFp" target='_blank'>danh-thiếp</a>) để người tốt bụng gọi cho bạn.
 <br>Ví-điện-tử nằm trong một smartphone, khi smartphone bị mất thì xác-suất của việc mua smartphone mới là gần 100% nhưng xác-suất của việc bạn bị mất tiền trong ví-điện-tử là gần 0%. Tiền trong ví-điện-tử được bảo-vệ bằng mật-khẩu do bạn đặt, nếu smartphone có khả năng đọc dấu-vân-tay thì ví-điện-tử cũng được bảo-vệ bằng dấu-vân-tay của bạn. Khi không có mật-khẩu và dấu-vân-tay của bạn thì không ai lấy được tiền trong ví-điện-tử. Bạn chỉ cần cài app ví-điện-tử trên một smartphone khác và login vào với số-điện-thoại đã dùng cho ví thì số tiền sẽ hiện ra y như trước.</p>
@@ -487,18 +483,18 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-<h1>Ví-điện-tử PayPal</h1>
+<h2>Ví-điện-tử PayPal</h2>
 <p>PayPal là một dịch-vụ-thanh-toán qua Internet đã có từ năm 1998. Mặc dù cũng có một số đặc-tính của ví-điện-tử, cũng có app trên smartphone nhưng PayPal hoạt-động chủ-yếu trên web.
 <br>Các dịch-vụ của PayPal gồm có thanh-toán online và chuyển tiền online. PayPal đang hoạt-động ở 200 nước trên thế-giới, giao-dịch với 100 loại tiền, khách-hàng có-thể giữ 25 loại tiền trong ví và có-thể rút tiền từ ví về tài-khoản-ngân-hàng ở 56 nước. Phí-chuyển-tiền qua PayPal khá cao, nhất là khi chuyển không vì mục đích thương mại.
 <br>Để chuyển tiền đến một ví PayPal của ai đó, bạn chỉ cần biết địa chỉ dạng web của ví đó. Ví dụ ví PayPal của tôi là <a href="https://www.paypal.me/LHBoi" target='_blank'>https://www.paypal.me/LHBoi</a>.
 <br>Khi tiền được chuyển vào ví PayPal, người chủ ví nhận được một email thông-báo từ PayPal.
 <br>Có những kẻ-gian dàn-dựng những <a href="https://www.facebook.com/notes/b%E1%BB%99i-l%C3%AA/nh%E1%BB%AFng-th%E1%BB%A3-s%C4%83n-r%C3%ACnh-m%E1%BB%93i-tr%C3%AAn-m%C3%A2y-internet/1492657390826606/" target='_blank'>kịch bản lừa đảo</a> người-giao-dịch qua ví PayPal bằng cách gửi email giả-mạo từ PayPal thông-báo "tiền đã vào ví, hãy thực-hiện giao-dịch".</p>
 <p>Trong Tháng-Năm 2020, PayPal đã mở tính-năng <a href="https://www.businessinsider.com/paypal-adds-qr-code-payments-to-app-2020-5" target='_blank'>thanh-toán qua QR-code ở 28 nước</a> (không có Việt-Nam).</p>
-<h1>QR-Payment</h1>
+<h2>QR-Payment</h2>
 <p>Bên cạnh các hệ-thống-ví-điện-tử, còn có một dạng thanh-toán qua máy-điện-thoại-di-động khác là QR-Payment. Trong QR-Payment thì người-dùng phải có tài-khoản-ngân-hàng và trả-tiền thẳng từ số tiền trong tài-khoản-ngân-hàng, không có một ví-tiền bên cạnh tài-khoản.
 <br>Hệ-thống-thanh-toán QR phổ biến nhất ở Việt-Nam là của <a href="https://vnpayment.vnpay.vn/ve-chung-toi-vnpayment.htm" target='_blank'>VNPAY</a>.
 <br>Các app của các ngân-hàng thường có chức-năng QR Payment. QR Payment tương đương như một cái thẻ debit liên kết với tài-khoản-ngân-hàng. Một số ngân-hàng (MSB, Vietcombank, TPBank, VPBank) tạo QR-code của tài-khoản-ngân-hàng trong app để người khác scan và gửi tiền vào tài-khoản-ngân-hàng đó nhanh chóng và tiện lợi như các ví-điện-tử ở trên. Nếu không có QR-code thì người dùng QR Payment không thể nhận tiền như ví-điện-tử.</p>
-<h1>Pi Network</h1>
+<h2>Pi Network</h2>
 <p>Dự án <a href="pi-network">Pi Network</a> đang phát triển với mục tiêu trở thành một ví điện tử dựa trên blockchain với hàng tỷ người sử dụng trên khắp thế giới. Mục tiêu của Pi là trở thành ví điện tử thông dụng như MoMo, ZaloPay, AliPay, WeChat Pay để mua bán mọi thứ hàng-hoá và dịch-vụ trong đời sống hàng ngày cả mua-bán trực-tiếp lẫn mua-bán qua Internet.</p>
   <hr>
 Hit count <amp-iframe width="120" height="30" frameborder="0" 
