--- a/kinh-nghiem/may-tinh/cashflow.html
+++ b/kinh-nghiem/may-tinh/cashflow.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Cashflow (Trang web LHBội)</title>
+<title>Cashflow</title>
 <meta name="description" content="Trò chơi Cashflow do Robert Kiyosaki nghĩ ra, rất thích hợp để mỗi người học kinh nghiệm quản lý tiền của cá nhân và gia đình sao cho mau tự do tài chính." />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân, cashflow">
 <link rel="canonical" href="https://lehboi.github.io/kinh-nghiem/may-tinh/cashflow">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,15 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
   <div class="body">
-    <div class="title">Cashflow</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -236,6 +230,7 @@ https://lehboi.github.io/kinh-nghiem/may-tinh/cashflow
     </amp-facebook-like>
   </div>
 
+  <h1>Cashflow</h1>
 <div class="inlineleft"><amp-img alt="Cashflow game set" height="110" src="/images/cashflowgamesg-board-101c509.jpg" width="200" height="110" layout="fixed"></amp-img></div>
 <p>Trò chơi Cashflow do Robert Kiyosaki nghĩ ra, rất thích hợp để mỗi người học kinh nghiệm quản lý tiền của cá nhân và gia đình sao cho mau <a href="/huu-ich/chi-tieu">tự do tài chính</a>. Có thể chơi Cashflow với bộ trò chơi gồm xúc xắc, bảng in sẵn hoặc có thể chơi qua web. Chơi qua web thì đỡ tốn công ghi chép và cộng trừ.
 <br>Mỗi ván Cashflow trên web gồm 1 tới 6 bên, mỗi bên dùng một máy tính. Từ 10 tuổi trở lên là có thể chơi được. Nếu muốn vừa chơi vừa chat với nhau thì hẹn nhau cùng chơi online, người đầu tiên create game với password. những người tiếp theo join vào game để chơi. Nếu không thể hẹn được với bạn thì chơi một mình.</p>
