--- a/kinh-nghiem/may-tinh/in-sach-nho.html
+++ b/kinh-nghiem/may-tinh/in-sach-nho.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>In sách nhỏ (Trang web LHBội)</title>
+<title>In sách nhỏ</title>
 <meta name="description" content="In sách bỏ túi cỡ A7 bằng máy in phun khổ A4" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân">
 <link rel="canonical" href="https://lehboi.github.io/kinh-nghiem/may-tinh/in-sach-nho">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,16 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
   <div class="body">
-    <div class="title">In sách nhỏ</div>
-<div class="right">Soạn lần đầu ngày 07/07/2011</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -237,6 +230,8 @@ https://lehboi.github.io/kinh-nghiem/may-tinh/in-sach-nho
     </amp-facebook-like>
   </div>
 
+  <h1>In sách nhỏ</h1>
+<div class="right">Soạn lần đầu ngày 07/07/2011</div>
 <p>Các word processor như MS Word và <a href="https://www.openoffice.org/" target="_blank">OpenOffice Writer</a> có khả năng in tài liệu thành dạng booklet với bốn trang trên hai mặt giấy. Nhưng khả năng đó bị giới hạn:</p>
 <ul>
 <li>nếu in nhiều hơn hai trang trên một mặt giấy thì những trang đó không được sắp xếp đúng để đóng lại thành sách</li>
