--- a/kinh-nghiem/may-tinh/raspberrypi-2.html
+++ b/kinh-nghiem/may-tinh/raspberrypi-2.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>RaspberryPi (2) (Trang web LHBội)</title>
+<title>RaspberryPi (2)</title>
 <meta name="description" content="Trang 2: Máy tính tí hon RaspberryPi làm trung tâm giải trí gia đình" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân, raspberrypi">
 <link rel="alternate" href="https://www.lhboi.name.vn/kinh-nghiem/may-tinh/raspberrypi-2">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,15 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
   <div class="body">
-    <div class="title">RaspberryPi (2)</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -236,6 +230,7 @@ https://lehboi.github.io/kinh-nghiem/may-tinh/raspberrypi
     </amp-facebook-like>
   </div>
 
+  <h1>RaspberryPi (2)</h1>
 <p>Trước khi gắn Raspberry Pi thì máy tính để bàn chạy Ubuntu Linux là nguồn phát phim với 4 ổ đĩa cứng SATA 3,5” có tổng dung lượng là 4,5TB. Để nối các ổ đĩa cứng SATA với Raspberry Pi, tôi đã mua 2 USB ⇔ SATA/PATA bridge <a href="https://www.vitinhphongvu.com/thiet-bi-tin-hoc/khac/card-chuyen-doi/cable-usb--ide--sata-dtech-8003a.html" rel="nofollow" target="_blank">DTech 8003A</a>. Một bridge dùng để nối một ổ đĩa cứng 120GB vào Raspberry Pi thường trực, ổ đó dùng để chia sẻ phim qua torrent. Bridge thứ hai dùng để đọc phim từ một trong các ổ đĩa cứng chứa phim, xem phim xong thì tắt điện ổ cứng, cất vào ngăn kéo.</p>
 <p>Dùng Raspberry Pi để xem phim có vài điều tiện hơn so với dùng máy tính để bàn:</p>
 <ul><li>không cần dùng bàn phím và chuột, dùng ngay cái điều khiển từ xa của TV để điều khiển Raspberry Pi.</li>
