--- a/kinh-nghiem/may-tinh/tien-ich-di-dong.html
+++ b/kinh-nghiem/may-tinh/tien-ich-di-dong.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html amp lang="vi">
 <head>
-<title>Tiện ích di động (Trang web LHBội)</title>
+<title>Những dịch vụ tiện ích đáng chú ý của các công ty điện thoại di động</title>
 <meta name="description" content="Những tiện ích của dịch vụ điện thoại di động, tiết kiệm và tiện lợi" />
 <meta name="keywords" content="hữu ích, tài chính, cá nhân">
 <link rel="alternate" href="https://www.lhboi.name.vn/kinh-nghiem/may-tinh/tien-ich-di-dong">
@@ -66,7 +66,7 @@ div.lrsp {margin: 0px 5px 0px 5px;}
 .todiscuss {color:lightskyblue;}
 div.center {text-align:center;}
 div.inlineleft { display:inline;float:left;margin:0px 5px 0px 0px; }
-h1 {color:#c2ff66;font-family:serif}
+h1 {text-align:center;color:#ffe033;font-family:serif}
 h2 {color:#adff33;font-family:serif}
 h3 {color:#a3ff1a;font-family:serif}
 h4 {color:#8ae600;font-family:serif}
@@ -139,6 +139,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 </style>
 </head>
 
+
 <body>
   <!-- top of body -->
   <!-- sidebar menu -->
@@ -210,15 +211,8 @@ data-ad-slot="5275186684">
 
   </div>
   
-  <div class="body">
-    <div class="right">Website LHBoi.name.vn đang được chuyển đến địa chỉ mới LeHBoi.github.io.
-    </div>
-  </div>
-
 
   <div class="body">
-    <div class="title">Những dịch vụ tiện ích đáng chú ý của các công ty điện thoại di động</div>
-
   <div>
     <amp-social-share type="email" height="32"></amp-social-share>
     <amp-social-share type="whatsapp" height="32"></amp-social-share>
@@ -236,6 +230,7 @@ https://lehboi.github.io/kinh-nghiem/may-tinh/tien-ich-di-dong
     </amp-facebook-like>
   </div>
 
+  <h1>Những dịch vụ tiện ích đáng chú ý của các công ty điện thoại di động</h1>
 <ol>
 <li>Hãy gọi lại. Khi máy bạn bị khoá chiều gọi đi hoặc không đủ tiền để gọi, bạn có thể nhắn người khác gọi lại mà không tốn tiền nhắn.
 <ul><li>Mobifone Call Me: bấm USSD <b>*105*Sđt#
