--- a/sitemap.html
+++ b/sitemap.html
@@ -180,14 +180,12 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
         <a href='/huu-ich/dau-tu-co-phieu/quy-dau-tu'>Quỹ-đầu-tư</a><br>
         <a href='/huu-ich/dau-tu-co-phieu/so-tk-hay-dau-tu'>Sổ-tiết-kiệm hay Quỹ-đầu-tư?</a><br>
-        <a href='/huu-ich/dau-tu-co-phieu/thi-truong-xuong-doc'>Làm gì khi thị-trường xuống-dốc?</a><br>
-        <a href='/huu-ich/dau-tu-co-phieu/maxx-pltv'>Maxx - Phúc Lộc Thịnh Vượng</a>
+        <a href='/huu-ich/dau-tu-co-phieu/thi-truong-xuong-doc'>Làm gì khi thị-trường xuống-dốc?</a>
 
       <h4 class="myheader"><a href='/huu-ich/cac-loai-bao-hiem/'>Các loại bảo-hiểm</a></h4>
 
         <a href='/huu-ich/cac-loai-bao-hiem/phi-bao-hiem-nhan-tho'>Phí-bảo-hiểm-nhân-thọ</a><br>
-        <a href='/huu-ich/cac-loai-bao-hiem/bhnt-lien-ket-chung'>Bảo-hiểm-nhân-thọ-liên-kết-chung</a><br>
-        <a href='/huu-ich/cac-loai-bao-hiem/diem-tua-dau-tu'>Điểm Tựa Đầu Tư</a>
+        <a href='/huu-ich/cac-loai-bao-hiem/bhnt-lien-ket-chung'>Bảo-hiểm-nhân-thọ-liên-kết-chung</a>
 
       <h4 class="myheader"><a href='/huu-ich/cau-chuyen/'>Câu-chuyện</a></h4>
 
@@ -202,8 +200,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
         <a href='/huu-ich/cau-chuyen/mua-nha-hay-dau-tu'>Để tiền mua-nhà hay đầu-tư</a><br>
         <a href='/huu-ich/cau-chuyen/kakeibo'>Tiết-kiệm tiền kiểu Nhật</a><br>
         <a href='/huu-ich/cau-chuyen/bot-lo-ve-tien'>6 điều giúp tôi bớt lo-lắng về tiền-bạc</a><br>
-        <a href='/huu-ich/cau-chuyen/sinh-lao-benh-tu'>Sinh Lão Bệnh Tử</a><br>
-        <a href='/huu-ich/cau-chuyen/dang-thieng-lieng'>Sứ-giả của Đấng-Thiêng-Liêng</a>
+        <a href='/huu-ich/cau-chuyen/sinh-lao-benh-tu'>Sinh Lão Bệnh Tử</a>
 
   <h3 class="myheader">Kinh-nghiệm</h3>
     <h4 class="myheader"><a href='/kinh-nghiem/may-tinh/'>Máy-tính</a></h4>
@@ -215,26 +212,18 @@ div.footer { font-size: 80%; color: red; text-align: center; }
       <a href='/kinh-nghiem/may-tinh/cryptocurrency'>Tìm-hiểu Bitcoin</a><br>
       <a href="/kinh-nghiem/may-tinh/vi-dien-tu">Nhận-xét các ví-điện-tử</a><br>
       <a href='/kinh-nghiem/may-tinh/gnucash'>GnuCash</a><br>
-      <a href='/kinh-nghiem/may-tinh/bat-dau-gnucash'>Bắt-đầu dùng GnuCash</a><br>
       <a href='/kinh-nghiem/may-tinh/ham-tai-chinh'>Các phép-tính-tài-chính cần biết</a><br>
       <a href='/kinh-nghiem/may-tinh/roaming'>Wi-Fi Roaming</a><br>
       <a href='/kinh-nghiem/may-tinh/tien-ich-di-dong'>Tiện-ích-di-động</a><br>
       <a href='/kinh-nghiem/may-tinh/OTT-apps'>OTT app để liên-lạc</a><br>
       <a href='/kinh-nghiem/may-tinh/conferencecall'>Conference Call</a><br>
-      <a href='/kinh-nghiem/may-tinh/goi-cuoc-di-dong-noi-mang'>Gói-cước-di-động nội-mạng</a><br>
       <a href='/kinh-nghiem/may-tinh/cashflow'>Trò-chơi học-làm-giàu Cashflow</a><br>
       <a href='/kinh-nghiem/may-tinh/tai-khoan-google'>Tạo tài-khoản Google</a><br>
       <a href='/kinh-nghiem/may-tinh/googlemaps'>Kinh-nghiệm dùng Google Maps ở Việt-Nam</a><br>
       <a href='/kinh-nghiem/may-tinh/spam-call'>Chặn những cuộc-gọi-tiếp-thị</a><br>
       <a href='/kinh-nghiem/may-tinh/spam'>Spam</a><br>
       <a href='/kinh-nghiem/may-tinh/raspberrypi'>RaspberryPi</a><br>
-      <a href='/kinh-nghiem/may-tinh/pin-lithium-ion'>Pin Lithium Ion</a><br>
-      <a href='/kinh-nghiem/may-tinh/in-sach-nho'>In sách nhỏ</a><br>
-      <a href='/kinh-nghiem/may-tinh/linux'>Linux</a><br>
       <a href='/kinh-nghiem/may-tinh/toys'>Home server cũ</a><br>
-      <a href='/kinh-nghiem/may-tinh/nhiet-do'>Nhiệt độ CPU</a><br>
-      <a href='/kinh-nghiem/may-tinh/in-phun'>Máy in phun</a><br>
-      <a href='/kinh-nghiem/may-tinh/fax'>Fax từ Linux</a><br>
       <a href='/kinh-nghiem/may-tinh/oss'>Phần-mềm-mã-nguồn-mở</a><br>
       <a href='/kinh-nghiem/may-tinh/phan-mem-tu-do'>Phần-mềm-tự-do</a>
 
@@ -257,20 +246,17 @@ div.footer { font-size: 80%; color: red; text-align: center; }
       <a href='/kinh-nghiem/linh-tinh/nong'>Nóng</a><br>
       <a href='/kinh-nghiem/linh-tinh/nhiet-do'>Nhiệt độ một ngày</a><br>
       <a href='/kinh-nghiem/linh-tinh/tan-so-cua-tv'>Tần số của TV</a><br>
-      <a href='/kinh-nghiem/linh-tinh/anh'>Ảnh</a><br>
       <a href='/kinh-nghiem/linh-tinh/hong-ngoai'>Hồng ngoại</a>
 
   <h3 class="myheader"><a href='/y-kien/'>Ý kiến</a></h3>
 
     <a href='/y-kien/su-giau-co'>Nguồn gốc sự giàu có</a><br>
-    <a href='/y-kien/do-giau'>Đo độ giàu có</a><br>
     <a href='/y-kien/bat-ca-hai-tay'>Bắt cá hai tay</a><br>
     <a href='/y-kien/xa-hoi-thong-tin'>Xã-hội thông-tin</a><br>
     <a href='/y-kien/bi-mat-doi-tu'>Bí-mật đời-tư</a><br>
     <a href='/y-kien/dung-hang-viet-nam'>Dùng hàng Việt</a><br>
     <a href='/y-kien/muc-hay-den'>Gần mực thì đen, gần đèn thì sáng</a><br>
     <a href='/y-kien/thanh-ngu-ve-tien'>Thành ngữ về tiền</a><br>
-    <a href='/y-kien/tien-va-mau'>Tiền và Máu</a><br>
     <a href='/y-kien/gia-tra'>Giả trá</a><br>
     <a href='/y-kien/nhung-cai-nem'>Những cái nêm</a><br>
     <a href='/y-kien/khac-nguoi'>Khác người</a><br>
